--- a/locales/ko.schema.json
+++ b/locales/ko.schema.json
@@ -650,7 +650,7 @@
           "label": "사용자 지정 로고 폭"
         },
         "logo_position": {
-          "label": "큰 화면에서 로고 위치",
+          "label": "데스크톱 로고 위치",
           "options__1": {
             "label": "왼쪽 중간"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "가운데 상단"
-          }
+          },
+          "info": "위치는 자동으로 모바일에 최적화됩니다."
         },
         "menu": {
           "label": "메뉴"
@@ -819,7 +820,7 @@
               "options__2": {
                 "label": "크게"
               },
-              "label": "제목 글꼴 사이즈"
+              "label": "제목 사이즈"
             }
           },
           "name": "제목"
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "크게"
           },
-          "label": "이미지 비율"
+          "label": "이미지 높이",
+          "info": "섹션 높이를 결정합니다."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "이미지 우선"
           },
           "options__2": {
-            "label": "텍스트 우선"
+            "label": "이미지 두 번째"
           },
-          "label": "데스크톱 레이아웃",
+          "label": "데스크톱 이미지 배치",
           "info": "기본 모바일 레이아웃은 이미지 우선입니다."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "작게"
+          },
+          "options__2": {
+            "label": "보통"
+          },
+          "options__3": {
+            "label": "크게"
+          },
+          "label": "데스크톱 이미지 폭",
+          "info": "이미지는 자동으로 모바일에 최적화됩니다."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "데스크톱 콘텐츠 정렬",
+          "options__2": {
+            "label": "가운데"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "위쪽"
+          },
+          "options__2": {
+            "label": "중간"
+          },
+          "options__3": {
+            "label": "아래쪽"
+          },
+          "label": "데스크톱 콘텐츠 위치"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "겹침 없음"
+          },
+          "options__2": {
+            "label": "겹침"
+          },
+          "label": "콘텐츠 레이아웃"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "왼쪽"
+          },
+          "options__3": {
+            "label": "오른쪽"
+          },
+          "label": "모바일 콘텐츠 정렬",
+          "options__2": {
+            "label": "가운데"
+          }
         }
       },
       "blocks": {
@@ -926,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "제목"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "작게"
+              },
+              "options__2": {
+                "label": "보통"
+              },
+              "options__3": {
+                "label": "크게"
+              },
+              "label": "제목 사이즈"
             }
           },
           "name": "제목"
@@ -933,7 +1005,19 @@
         "text": {
           "settings": {
             "text": {
-              "label": "설명"
+              "label": "콘텐츠"
+            },
+            "text_style": {
+              "label": "텍스트 스타일",
+              "options__1": {
+                "label": "본문"
+              },
+              "options__2": {
+                "label": "소제목"
+              },
+              "options__3": {
+                "label": "대문자"
+              }
             }
           },
           "name": "텍스트"
@@ -949,6 +1033,35 @@
             }
           },
           "name": "버튼"
+        },
+        "caption": {
+          "name": "캡션",
+          "settings": {
+            "text": {
+              "label": "텍스트"
+            },
+            "text_style": {
+              "label": "텍스트 스타일",
+              "options__1": {
+                "label": "소제목"
+              },
+              "options__2": {
+                "label": "대문자"
+              }
+            },
+            "caption_size": {
+              "label": "텍스트 사이즈",
+              "options__1": {
+                "label": "작게"
+              },
+              "options__2": {
+                "label": "보통"
+              },
+              "options__3": {
+                "label": "크게"
+              }
+            }
+          }
         }
       },
       "presets": {
@@ -1028,13 +1141,14 @@
           "label": "작성자 표시"
         },
         "layout": {
-          "label": "큰 화면 레이아웃",
+          "label": "데스크톱 레이아웃",
           "options__1": {
             "label": "그리드"
           },
           "options__2": {
             "label": "콜라주"
-          }
+          },
+          "info": "게시물은 모바일에 누적됩니다."
         },
         "image_height": {
           "label": "추천 이미지 높이",
@@ -1141,7 +1255,7 @@
           "label": "이미지 테두리 표시"
         },
         "collapse_on_larger_devices": {
-          "label": "더 큰 화면에서 축소"
+          "label": "데스크톱에서 축소"
         },
         "show_rating": {
           "label": "제품 평점 표시",
@@ -1471,10 +1585,44 @@
           "label": "동영상 루프 활성화"
         },
         "enable_sticky_info": {
-          "label": "큰 화면에 제품 정보 스티커 사용"
+          "label": "데스크톱에서 콘텐츠 고정 활성화"
         },
         "hide_variants": {
           "label": "이형 상품을 선택한 후 다른 이형 상품의 미디어 숨기기"
+        },
+        "gallery_layout": {
+          "label": "데스크톱 레이아웃",
+          "options__1": {
+            "label": "누적"
+          },
+          "options__2": {
+            "label": "썸네일"
+          },
+          "options__3": {
+            "label": "썸네일 캐러셀"
+          }
+        },
+        "media_size": {
+          "label": "데스크톱 미디어 사이즈",
+          "options__1": {
+            "label": "작게"
+          },
+          "options__2": {
+            "label": "보통"
+          },
+          "options__3": {
+            "label": "크게"
+          },
+          "info": "미디어는 자동으로 모바일에 최적화됩니다."
+        },
+        "mobile_thumbnails": {
+          "label": "모바일 레이아웃",
+          "options__1": {
+            "label": "썸네일 표시"
+          },
+          "options__2": {
+            "label": "썸네일 숨기기"
+          }
         }
       }
     },
@@ -1757,7 +1905,7 @@
               "options__2": {
                 "label": "보통"
               },
-              "label": "제목 글꼴 크기",
+              "label": "제목 사이즈",
               "options__3": {
                 "label": "크게"
               }
@@ -2302,7 +2450,8 @@
               },
               "options__9": {
                 "label": "오른쪽 하단"
-              }
+              },
+              "info": "위치는 자동으로 모바일에 최적화됩니다."
             },
             "show_text_box": {
               "label": "데스크톱에 컨테이너 표시"
