--- a/locales/sk-SK.json
+++ b/locales/sk-SK.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Prejsť na informácie o produkte",
     "total_reviews": "celkový počet recenzií",
-    "star_reviews_info": "Počet hviezdičiek: {{ rating_value }}/{{ rating_max }}",
-    "load_slide": "Načítať snímku",
-    "previous_slideshow": "Predchádzajúca snímka",
-    "next_slideshow": "Nasledujúca snímka",
-    "pause_slideshow": "Pozastaviť prezentáciu",
-    "play_slideshow": "Prehrať prezentáciu",
-    "carousel": "Karusel",
-    "slide": "Snímka"
+    "star_reviews_info": "Počet hviezdičiek: {{ rating_value }}/{{ rating_max }}"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Obnoviť"
       },
       "media": {
-        "open_featured_media": "Otvoriť odporúčané médium v zobrazení galérie",
-        "open_media": "Otvoriť médium {{ index }} v zobrazení galérie",
+        "open_media": "Otvoriť médium {{ index }} v modálnom okne",
         "play_model": "Prehrať 3D zobrazovač",
-        "play_video": "Prehrať video"
+        "play_video": "Prehrať video",
+        "gallery_viewer": "Zobrazovač galérie",
+        "load_image": "Načítať obrázok {{ index }} v zobrazení galérie",
+        "load_model": "Načítať 3D model {{ index }} v zobrazení galérie",
+        "load_video": "Prehrať video {{ index }} v zobrazení galérie",
+        "image_available": "Obrázok {{ index }} je teraz dostupný v zobrazení galérie"
       },
       "view_full_details": "Zobraziť všetky podrobnosti",
       "include_taxes": "Vrátane dane.",
