--- a/locales/bg-BG.json
+++ b/locales/bg-BG.json
@@ -73,14 +73,7 @@
     "loading": "Зареждане...",
     "skip_to_product_info": "Прескочи към информацията за продукта",
     "total_reviews": "общ брой мнения",
-    "star_reviews_info": "{{ rating_value }} от {{ rating_max }} звезди",
-    "load_slide": "Зареждане на слайд",
-    "previous_slideshow": "Предишен слайд",
-    "next_slideshow": "Следващ слайд",
-    "pause_slideshow": "Пауза на слайдшоуто",
-    "play_slideshow": "Възпроизвеждане на слайдшоу",
-    "carousel": "Въртележка",
-    "slide": "Слайд"
+    "star_reviews_info": "{{ rating_value }} от {{ rating_max }} звезди"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Обнови"
       },
       "media": {
-        "open_featured_media": "Отваряне на актуалната мултимедия в изглед на галерия",
-        "open_media": "Отваряне на мултимедия {{ index }} в изглед на галерия",
+        "open_media": "Отваряне на мултимедия {{ index }} в модален елемент",
         "play_model": "Възпроизвеждане с 3D Viewer",
-        "play_video": "Възпроизвеждане на видеоклип"
+        "play_video": "Възпроизвеждане на видеоклип",
+        "gallery_viewer": "Визуализатор на галерията",
+        "load_image": "Зареждане на изображение {{ index }} във визуализатора на галерията",
+        "load_model": "Зареждане на 3D модел {{ index }} във визуализатора на галерията",
+        "load_video": "Пускане на видео {{ index }} във визуализатора на галерията",
+        "image_available": "Изображение {{ index }} вече е налично във визуализатора на галерията"
       },
       "view_full_details": "Покажи пълните подробности",
       "include_taxes": "С включени данъци.",
