--- a/locales/cs.json
+++ b/locales/cs.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Přejít na informace o produktu",
     "total_reviews": "celkový počet recenzí",
-    "star_reviews_info": "{{ rating_value }} z {{ rating_max }} hvězdiček",
-    "load_slide": "Načíst snímek",
-    "previous_slideshow": "Předchozí snímek",
-    "next_slideshow": "Další snímek",
-    "pause_slideshow": "Pozastavit prezentaci",
-    "play_slideshow": "Přehrát prezentaci",
-    "carousel": "Karusel",
-    "slide": "Snímek"
+    "star_reviews_info": "{{ rating_value }} z {{ rating_max }} hvězdiček"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Aktualizovat"
       },
       "media": {
-        "open_featured_media": "Otevřít vybraný multimediální obsah v zobrazení galerie",
-        "open_media": "Otevřít multimediální obsah {{ index }} v zobrazení galerie",
+        "open_media": "Otevřít multimédia {{ index }} v modálním okně",
         "play_model": "Přehrát v 3D prohlížeči",
-        "play_video": "Přehrát video"
+        "play_video": "Přehrát video",
+        "gallery_viewer": "Prohlížeč galerie",
+        "load_image": "Načíst obrázek {{ index }} do zobrazení galerie",
+        "load_model": "Načíst 3D model {{ index }} do zobrazení galerie",
+        "load_video": "Přehrát video {{ index }} v zobrazení galerie",
+        "image_available": "Obrázek {{ index }} je nyní k dispozici v zobrazení galerie"
       },
       "view_full_details": "Zobrazit veškeré podrobnosti",
       "include_taxes": "Včetně daní.",
