--- a/locales/cs.schema.json
+++ b/locales/cs.schema.json
@@ -650,7 +650,7 @@
           "label": "Šířka vlastního loga"
         },
         "logo_position": {
-          "label": "Pozice loga na velkých obrazovkách",
+          "label": "Pozice loga na počítači",
           "options__1": {
             "label": "Uprostřed vlevo"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Nahoře ve středu"
-          }
+          },
+          "info": "Pozice se automaticky optimalizuje pro mobilní prostředí."
         },
         "menu": {
           "label": "Nabídka"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Velká"
               },
-              "label": "Velikost písma nadpisu"
+              "label": "Velikost nadpisu"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Velká"
           },
-          "label": "Poměr obrázku"
+          "label": "Výška obrázku",
+          "info": "Určuje výšku sekce."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Obrázek jako první"
           },
           "options__2": {
-            "label": "Text jako první"
+            "label": "Druhý obrázek"
           },
-          "label": "Desktopové rozvržení",
+          "label": "Poloha obrázku na počítači",
           "info": "Výchozí mobilní rozvržení představuje možnost Obrázek jako první."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Malá"
+          },
+          "options__2": {
+            "label": "Střední"
+          },
+          "options__3": {
+            "label": "Velká"
+          },
+          "label": "Šířka obrázku na počítači",
+          "info": "Obrázek se automaticky optimalizuje pro mobilní prostředí."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu na počítači"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Nahoře"
+          },
+          "options__2": {
+            "label": "Uprostřed"
+          },
+          "options__3": {
+            "label": "Dole"
+          },
+          "label": "Pozice obsahu na počítači"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Bez překrytí"
+          },
+          "options__2": {
+            "label": "S překrytím"
+          },
+          "label": "Rozvržení obsahu"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          },
+          "label": "Zarovnání obsahu v mobilním prostředí"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Nadpis"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Malá"
+              },
+              "options__2": {
+                "label": "Střední"
+              },
+              "options__3": {
+                "label": "Velká"
+              },
+              "label": "Velikost nadpisu"
             }
           }
         },
@@ -934,7 +1006,16 @@
           "name": "Text",
           "settings": {
             "text": {
-              "label": "Popis"
+              "label": "Obsah"
+            },
+            "text_style": {
+              "label": "Textový styl",
+              "options__1": {
+                "label": "Hlavní část"
+              },
+              "options__2": {
+                "label": "Podtitul"
+              }
             }
           }
         },
@@ -947,6 +1028,35 @@
             },
             "button_link": {
               "label": "Tlačítkový odkaz"
+            }
+          }
+        },
+        "caption": {
+          "name": "Titulek",
+          "settings": {
+            "text": {
+              "label": "Text"
+            },
+            "text_style": {
+              "label": "Textový styl",
+              "options__1": {
+                "label": "Podtitul"
+              },
+              "options__2": {
+                "label": "Velká písmena"
+              }
+            },
+            "caption_size": {
+              "label": "Velikost textu",
+              "options__1": {
+                "label": "Malý"
+              },
+              "options__2": {
+                "label": "Střední"
+              },
+              "options__3": {
+                "label": "Velký"
+              }
             }
           }
         }
@@ -1028,13 +1138,14 @@
           "label": "Zobrazit autora"
         },
         "layout": {
-          "label": "Rozvržení na velkých obrazovkách",
+          "label": "Rozvržení v počítači",
           "options__1": {
             "label": "Mřížka"
           },
           "options__2": {
             "label": "Koláž"
-          }
+          },
+          "info": "Příspěvky se v mobilním prostředí zobrazují nad sebou."
         },
         "image_height": {
           "label": "Výška propagovaného obrázku",
@@ -1141,7 +1252,7 @@
           "label": "Zobrazit ohraničení obrázku"
         },
         "collapse_on_larger_devices": {
-          "label": "Sbalit na větších obrazovkách"
+          "label": "Sbalit v počítači"
         },
         "show_rating": {
           "label": "Zobrazit hodnocení produktů",
@@ -1471,10 +1582,44 @@
           "label": "Povolit smyčky videa"
         },
         "enable_sticky_info": {
-          "label": "Na velkých obrazovkách povolit plovoucí informace o produktu"
+          "label": "Povolit plovoucí obsah v počítači"
         },
         "hide_variants": {
           "label": "Po výběru varianty skrýt multimédia ostatních variant"
+        },
+        "gallery_layout": {
+          "label": "Rozvržení v počítači",
+          "options__1": {
+            "label": "Nad sebou"
+          },
+          "options__2": {
+            "label": "Miniatury"
+          },
+          "options__3": {
+            "label": "Karusel miniatur"
+          }
+        },
+        "media_size": {
+          "label": "Velikost multimédií v počítači",
+          "info": "Multimédia se automaticky optimalizují pro mobilní prostředí.",
+          "options__1": {
+            "label": "Malá"
+          },
+          "options__2": {
+            "label": "Střední"
+          },
+          "options__3": {
+            "label": "Velká"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Mobilní rozvržení",
+          "options__1": {
+            "label": "Zobrazit miniatury"
+          },
+          "options__2": {
+            "label": "Skrýt miniatury"
+          }
         }
       }
     },
@@ -1758,7 +1903,7 @@
               "options__2": {
                 "label": "Střední"
               },
-              "label": "Velikost písma nadpisu",
+              "label": "Velikost nadpisu",
               "options__3": {
                 "label": "Velká"
               }
@@ -2213,7 +2358,8 @@
               },
               "options__9": {
                 "label": "Dole vpravo"
-              }
+              },
+              "info": "Pozice se automaticky optimalizuje pro mobilní prostředí."
             },
             "show_text_box": {
               "label": "Zobrazit kontejner na počítači"
