--- a/locales/da.json
+++ b/locales/da.json
@@ -73,14 +73,7 @@
     "loading": "Indlæser...",
     "skip_to_product_info": "Gå til produktoplysninger",
     "total_reviews": "anmeldelser i alt",
-    "star_reviews_info": "{{ rating_value }} ud af {{ rating_max }} stjerner",
-    "load_slide": "Indlæs slide",
-    "previous_slideshow": "Forrige slide",
-    "next_slideshow": "Næste slide",
-    "pause_slideshow": "Sæt diasshow på pause",
-    "play_slideshow": "Afspil diasshow",
-    "carousel": "Karrusel",
-    "slide": "Slide"
+    "star_reviews_info": "{{ rating_value }} ud af {{ rating_max }} stjerner"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Opdater"
       },
       "media": {
-        "open_featured_media": "Åbn det fremhævede medie i gallerivisning",
-        "open_media": "Åbn mediet {{ index }} i gallerivisning",
+        "open_media": "Åbn mediet {{ index }} i modus",
         "play_model": "Afspil 3D-fremviser",
-        "play_video": "Afspil video"
+        "play_video": "Afspil video",
+        "gallery_viewer": "Fremviser til Galleri",
+        "load_image": "Indlæs billedet {{ index }} i gallerivisning",
+        "load_model": "Indlæs 3D-modellen {{ index }} i gallerivisning",
+        "load_video": "Afspil videoen {{ index }} i gallerivisning",
+        "image_available": "Billedet {{ index }} er nu tilgængeligt i gallerivisning"
       },
       "view_full_details": "Se komplette oplysninger",
       "include_taxes": "Inklusive skat.",
