--- a/locales/de.json
+++ b/locales/de.json
@@ -73,14 +73,7 @@
     "loading": "Wird geladen ...",
     "skip_to_product_info": "Zu Produktinformationen springen",
     "total_reviews": "Bewertungen insgesamt",
-    "star_reviews_info": "{{ rating_value }} von {{ rating_max }} Sternen",
-    "load_slide": "Folie laden",
-    "previous_slideshow": "Vorherige Folie",
-    "next_slideshow": "Nächste Folie",
-    "pause_slideshow": "Slideshow pausieren",
-    "play_slideshow": "Slideshow abspielen",
-    "carousel": "Karussell",
-    "slide": "Folie"
+    "star_reviews_info": "{{ rating_value }} von {{ rating_max }} Sternen"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Aktualisieren"
       },
       "media": {
-        "open_featured_media": "Dargestellte Medien in Galerieansicht öffnen",
-        "open_media": "Medien {{ index }} in Galerieansicht öffnen",
+        "open_media": "Medien {{ index }} in Modal öffnen",
         "play_model": "3D-Viewer abspielen",
-        "play_video": "Video abspielen"
+        "play_video": "Video abspielen",
+        "gallery_viewer": "Galerie-Viewer",
+        "load_image": "Bild {{ index }} in Galerieansicht laden",
+        "load_model": "3D-Modell {{ index }} in Galerieansicht laden",
+        "load_video": "Video {{ index }} in Galerieansicht abspielen",
+        "image_available": "Bild {{ index }} ist nun in der Galerieansicht verfügbar"
       },
       "view_full_details": "Vollständige Details anzeigen",
       "include_taxes": "inkl. MwSt.",
