--- a/locales/el.json
+++ b/locales/el.json
@@ -73,14 +73,7 @@
     "loading": "Φόρτωση...",
     "skip_to_product_info": "Μετάβαση στις πληροφορίες προϊόντος",
     "total_reviews": "σύνολο κριτικών",
-    "star_reviews_info": "{{ rating_value }} από {{ rating_max }} αστέρια",
-    "load_slide": "Φόρτωση διαφάνειας",
-    "previous_slideshow": "Προηγούμενη διαφάνεια",
-    "next_slideshow": "Επόμενη διαφάνεια",
-    "pause_slideshow": "Παύση παρουσίασης",
-    "play_slideshow": "Αναπαραγωγή παρουσίασης",
-    "carousel": "Καρουζέλ",
-    "slide": "Διαφάνεια"
+    "star_reviews_info": "{{ rating_value }} από {{ rating_max }} αστέρια"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Ανανέωση"
       },
       "media": {
-        "open_featured_media": "Άνοιγμα επιλεγμένων μέσων στην προβολή συλλογής",
-        "open_media": "Άνοιγμα μέσου {{ index }} στην προβολή συλλογής",
+        "open_media": "Άνοιγμα μέσου {{ index }} στο βοηθητικό παράθυρο",
         "play_model": "Έναρξη εφαρμογής προβολής 3D",
-        "play_video": "Αναπαραγωγή βίντεο"
+        "play_video": "Αναπαραγωγή βίντεο",
+        "gallery_viewer": "Εργαλείο προβολής συλλογής",
+        "load_image": "Φόρτωση εικόνας {{ index }} στην προβολή συλλογής",
+        "load_model": "Φόρτωση μοντέλου 3D {{ index }} στην προβολή συλλογής",
+        "load_video": "Αναπαραγωγή βίντεο {{ index }} στην προβολή συλλογής",
+        "image_available": "Η εικόνα {{ index }} είναι τώρα διαθέσιμη στην προβολή συλλογής"
       },
       "view_full_details": "Προβολή όλων των λεπτομερειών",
       "include_taxes": "Ο φόρος συμπεριλαμβάνεται.",
