--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -790,7 +790,7 @@
           "label": "Custom logo width"
         },
         "logo_position": {
-          "label": "Logo position on large screens",
+          "label": "Desktop logo position",
           "options__1": {
             "label": "Middle left"
           },
@@ -799,7 +799,8 @@
           },
           "options__3": {
             "label": "Top center"
-          }
+          },
+          "info": "Position is automatically optimized for mobile."
         },
         "menu": {
           "label": "Menu"
@@ -871,7 +872,7 @@
         "show_text_box": {
           "label": "Show container on desktop"
         },
-        "desktop_content_alignment": {       
+        "desktop_content_alignment": {
           "options__1": {
             "label": "Left"
           },
@@ -905,7 +906,7 @@
         "header": {
           "content": "Mobile Layout"
         },
-        "mobile_content_alignment": {       
+        "mobile_content_alignment": {
           "options__1": {
             "label": "Left"
           },
@@ -942,7 +943,7 @@
               "options__2": {
                 "label": "Large"
               },
-              "label": "Heading font size"
+              "label": "Heading size"
             }
           }
         },
@@ -1012,7 +1013,20 @@
           "options__3": {
             "label": "Large"
           },
-          "label": "Image ratio"
+          "label": "Image height"
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Small"
+          },
+          "options__2": {
+            "label": "Medium"
+          },
+          "options__3": {
+            "label": "Large"
+          },
+          "label": "Desktop image width",
+          "info": "Image is automatically optimized for mobile."
         },
         "color_scheme": {
           "options__1": {
@@ -1037,10 +1051,55 @@
             "label": "Image first"
           },
           "options__2": {
-            "label": "Text first"
+            "label": "Image second"
           },
-          "label": "Desktop layout",
+          "label": "Desktop image placement",
           "info": "Image first is the default mobile layout."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Left"
+          },
+          "options__2": {
+            "label": "Center"
+          },
+          "options__3": {
+            "label": "Right"
+          },
+          "label": "Desktop content alignment"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Top"
+          },
+          "options__2": {
+            "label": "Middle"
+          },
+          "options__3": {
+            "label": "Bottom"
+          },
+          "label": "Desktop content position"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "No overlap"
+          },
+          "options__2": {
+            "label": "Overlap"
+          },
+          "label": "Content layout"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Left"
+          },
+          "options__2": {
+            "label": "Center"
+          },
+          "options__3": {
+            "label": "Right"
+          },
+          "label": "Mobile content alignment"
         }
       },
       "blocks": {
@@ -1049,6 +1108,47 @@
           "settings": {
             "heading": {
               "label": "Heading"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Small"
+              },
+              "options__2": {
+                "label": "Medium"
+              },
+              "options__3": {
+                "label": "Large"
+              },
+              "label": "Heading size"
+            }
+          }
+        },
+        "caption": {
+          "name": "Caption",
+          "settings": {
+            "text": {
+              "label": "Text"
+            },
+            "text_style": {
+              "label": "Text style",
+              "options__1": {
+                "label": "Subtitle"
+              },
+              "options__2": {
+                "label": "Uppercase"
+              }
+            },
+            "caption_size": {
+              "label": "Text size",
+              "options__1": {
+                "label": "Small"
+              },
+              "options__2": {
+                "label": "Medium"
+              },
+              "options__3": {
+                "label": "Large"
+              }
             }
           }
         },
@@ -1056,7 +1156,16 @@
           "name": "Text",
           "settings": {
             "text": {
-              "label": "Description"
+              "label": "Content"
+            },
+            "text_style": {
+              "label": "Text style",
+              "options__1": {
+                "label": "Body"
+              },
+              "options__2": {
+                "label": "Subtitle"
+              }
             }
           }
         },
@@ -1150,14 +1259,15 @@
           "content": "Change excerpts by editing your blog posts. [Learn more](https://help.shopify.com/en/manual/online-store/blogs/writing-blogs#display-an-excerpt-from-a-blog-post)"
         },
         "layout": {
-          "label": "Layout on large screens",
+          "label": "Desktop layout",
           "options__1": {
             "label": "Grid"
           },
           "options__2": {
             "label": "Collage"
-          }
-        },
+          },
+          "info": "Posts are stacked on mobile."
+       },
         "image_height": {
           "label": "Featured image height",
           "options__1": {
@@ -1267,7 +1377,7 @@
           "info": "[Customize filters](/admin/menus)"
         },
         "collapse_on_larger_devices": {
-          "label": "Collapse on larger screens"
+          "label": "Collapse on desktop"
         }
       }
     },
@@ -1590,7 +1700,41 @@
           "info": "Learn more about [media types.](https://help.shopify.com/manual/products/product-media)"
         },
         "enable_sticky_info": {
-          "label": "Enable sticky product information on large screens"
+          "label": "Enable sticky content on desktop"
+        },
+        "gallery_layout": {
+          "label": "Desktop layout",
+          "options__1": {
+            "label": "Stacked"
+          },
+          "options__2": {
+            "label": "Thumbnails"
+          },
+          "options__3": {
+            "label": "Thumbnail carousel"
+          }
+        },
+        "media_size": {
+          "label": "Desktop media size",
+          "info": "Media is automatically optimized for mobile.",
+          "options__1": {
+            "label": "Small"
+          },
+          "options__2": {
+            "label": "Medium"
+          },
+          "options__3": {
+            "label": "Large"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Mobile layout",
+          "options__1": {
+            "label": "Show thumbnails"
+          },
+          "options__2": {
+            "label": "Hide thumbnails"
+          }
         },
         "hide_variants": {
           "label": "Hide other variants’ media after selecting a variant"
@@ -1886,7 +2030,7 @@
         "header": {
           "content": "Mobile Layout"
         },
-        "mobile_content_alignment": {       
+        "mobile_content_alignment": {
           "options__1": {
             "label": "Left"
           },
@@ -2032,7 +2176,7 @@
               "options__3": {
                 "label": "Large"
               },
-              "label": "Heading font size"
+              "label": "Heading size"
             }
           }
         },
@@ -2187,6 +2331,7 @@
             },
             "box_align": {
               "label": "Desktop content position",
+              "info": "Position is automatically optimized for mobile.",
               "options__1": {
                 "label": "Top left"
               },
