--- a/locales/es.json
+++ b/locales/es.json
@@ -73,14 +73,7 @@
     "loading": "Cargando...",
     "skip_to_product_info": "Ir directamente a la información del producto",
     "total_reviews": "reseñas totales",
-    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrellas",
-    "load_slide": "Cargar diapositiva",
-    "previous_slideshow": "Diapositiva anterior",
-    "next_slideshow": "Diapositiva siguiente",
-    "pause_slideshow": "Pausar la presentación",
-    "play_slideshow": "Reproducir la presentación",
-    "carousel": "Carrusel",
-    "slide": "Diapositiva"
+    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrellas"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Actualizar"
       },
       "media": {
-        "open_featured_media": "Abrir elemento multimedia destacado en vista de galería",
-        "open_media": "Abrir elemento multimedia {{ index }} en vista de galería",
+        "open_media": "Abrir elemento multimedia {{ index }} en una ventana modal",
         "play_model": "Reproducir el visor 3D",
-        "play_video": "Reproducir video"
+        "play_video": "Reproducir video",
+        "gallery_viewer": "Visor de la galería",
+        "load_image": "Cargar la imagen {{ index }} en la vista de la galería",
+        "load_model": "Cargar el modelo 3D {{ index }} en la vista de la galería",
+        "load_video": "Reproducir el video {{ index }} en la vista de la galería",
+        "image_available": "La imagen {{ index }} ya está disponible en la vista de la galería"
       },
       "view_full_details": "Ver todos los detalles",
       "include_taxes": "Impuesto incluido.",
