--- a/locales/es.schema.json
+++ b/locales/es.schema.json
@@ -650,7 +650,7 @@
           "label": "Ancho del logo personalizado"
         },
         "logo_position": {
-          "label": "Posición de logo en pantallas grandes",
+          "label": "Posición de logo en computadora",
           "options__1": {
             "label": "Centrado a la izquierda"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Superior centrada"
-          }
+          },
+          "info": "La posición se optimizó automáticamente para dispositivos móviles."
         },
         "menu": {
           "label": "Menú"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Grande"
               },
-              "label": "Tamaño de fuente de título"
+              "label": "Tamaño del título"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Grande"
           },
-          "label": "Relación de aspecto de imagen"
+          "label": "Altura de imagen",
+          "info": "Determina la altura de la sección."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Imagen primero"
           },
           "options__2": {
-            "label": "Texto primero"
+            "label": "Imagen segunda"
           },
-          "label": "Diseño para computadora",
+          "label": "Ubicación de la imagen en computadoras",
           "info": "La imagen primero es el diseño predeterminado para móviles."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Pequeña"
+          },
+          "options__2": {
+            "label": "Mediana"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "label": "Ancho de la imagen en computadoras",
+          "info": "La imagen se optimiza automáticamente para dispositivos móviles."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Izquierda"
+          },
+          "options__2": {
+            "label": "Centrado"
+          },
+          "options__3": {
+            "label": "Derecha"
+          },
+          "label": "Alineación del contenido en computadoras"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Arriba"
+          },
+          "options__2": {
+            "label": "Centrada"
+          },
+          "options__3": {
+            "label": "Abajo"
+          },
+          "label": "Posición del contenido en computadoras"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Sin solapamiento"
+          },
+          "options__2": {
+            "label": "Solapamiento"
+          },
+          "label": "Diseño de contenido"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Izquierda"
+          },
+          "options__2": {
+            "label": "Centrado"
+          },
+          "options__3": {
+            "label": "Derecha"
+          },
+          "label": "Alineación del contenido en dispositivos móviles"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Título"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Pequeña"
+              },
+              "options__2": {
+                "label": "Mediana"
+              },
+              "options__3": {
+                "label": "Grande"
+              },
+              "label": "Tamaño del título"
             }
           }
         },
@@ -934,7 +1006,19 @@
           "name": "Texto",
           "settings": {
             "text": {
-              "label": "Descripción"
+              "label": "Contenido"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Cuerpo"
+              },
+              "options__2": {
+                "label": "Subtítulo"
+              },
+              "options__3": {
+                "label": "Mayúscula"
+              }
             }
           }
         },
@@ -947,6 +1031,35 @@
             },
             "button_link": {
               "label": "Enlace de botón"
+            }
+          }
+        },
+        "caption": {
+          "name": "Leyenda",
+          "settings": {
+            "text": {
+              "label": "Texto"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Subtítulo"
+              },
+              "options__2": {
+                "label": "Mayúscula"
+              }
+            },
+            "caption_size": {
+              "label": "Tamaño del texto",
+              "options__1": {
+                "label": "Pequeño"
+              },
+              "options__2": {
+                "label": "Mediano"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
             }
           }
         }
@@ -1028,13 +1141,14 @@
           "label": "Mostrar autor"
         },
         "layout": {
-          "label": "Diseño en pantallas grandes",
+          "label": "Diseño para computadora",
           "options__1": {
             "label": "Cuadrícula"
           },
           "options__2": {
             "label": "Collage"
-          }
+          },
+          "info": "Las publicaciones se apilaron en el dispositivo móvil."
         },
         "image_height": {
           "label": "Altura de imagen destacada",
@@ -1141,7 +1255,7 @@
           "label": "Mostrar borde de imagen"
         },
         "collapse_on_larger_devices": {
-          "label": "Contraer en pantallas más grandes"
+          "label": "Contraer en computadora"
         },
         "show_rating": {
           "label": "Mostrar calificación de productos",
@@ -1471,10 +1585,44 @@
           "label": "Activar la reproducción de video en bucle"
         },
         "enable_sticky_info": {
-          "label": "Activar información de producto fija en pantallas grandes"
+          "label": "Activar contenido fijo en computadoras"
         },
         "hide_variants": {
           "label": "Ocultar los elementos multimedia de las demás variantes tras seleccionar una de ellas"
+        },
+        "gallery_layout": {
+          "label": "Diseño para computadora",
+          "options__1": {
+            "label": "Apilado"
+          },
+          "options__2": {
+            "label": "Miniaturas"
+          },
+          "options__3": {
+            "label": "Carrusel de miniaturas"
+          }
+        },
+        "media_size": {
+          "label": "Tamaño de elementos multimedia en computadoras",
+          "info": "Los elementos multimedia se optimizan automáticamente para dispositivos móviles.",
+          "options__1": {
+            "label": "Pequeño"
+          },
+          "options__2": {
+            "label": "Mediano"
+          },
+          "options__3": {
+            "label": "Grande"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Diseño para móviles",
+          "options__1": {
+            "label": "Mostrar miniaturas"
+          },
+          "options__2": {
+            "label": "Ocultar miniaturas"
+          }
         }
       }
     },
@@ -1758,7 +1906,7 @@
               "options__2": {
                 "label": "Mediano"
               },
-              "label": "Tamaño de fuente de título",
+              "label": "Tamaño del título",
               "options__3": {
                 "label": "Grande"
               }
@@ -2302,7 +2450,8 @@
               },
               "options__9": {
                 "label": "Abajo a la derecha"
-              }
+              },
+              "info": "La posición se optimizó automáticamente para dispositivos móviles."
             },
             "show_text_box": {
               "label": "Mostrar contenedor en computadoras"
