--- a/locales/fi.json
+++ b/locales/fi.json
@@ -73,14 +73,7 @@
     "loading": "Ladataan...",
     "skip_to_product_info": "Siirry tuotetietoihin",
     "total_reviews": "arvosteluja yhteensä",
-    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} tähteä",
-    "load_slide": "Lataa dia",
-    "previous_slideshow": "Edellinen dia",
-    "next_slideshow": "Seuraava dia",
-    "pause_slideshow": "Keskeytä diaesitys",
-    "play_slideshow": "Toista diaesitys",
-    "carousel": "Karuselli",
-    "slide": "Dia"
+    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} tähteä"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Päivitä"
       },
       "media": {
-        "open_featured_media": "Avaa mainostettu aineisto gallerianäkymässä",
-        "open_media": "Avaa aineisto {{ index }} gallerianäkymässä",
+        "open_media": "Avaa aineisto {{ index }} modaalisessa ikkunassa",
         "play_model": "Toista 3D Viewer",
-        "play_video": "Toista video"
+        "play_video": "Toista video",
+        "gallery_viewer": "Gallerian katseluohjelma",
+        "load_image": "Lataa kuva {{ index }} gallerianäkymään",
+        "load_model": "Lataa 3D-malli {{ index }} gallerianäkymään",
+        "load_video": "Toista video {{ index }} gallerianäkymässä",
+        "image_available": "Kuva {{ index }} on nyt saatavilla gallerianäkymässä"
       },
       "view_full_details": "Näytä kaikki tiedot",
       "include_taxes": "Sisältää veron.",
