--- a/locales/fi.schema.json
+++ b/locales/fi.schema.json
@@ -650,7 +650,7 @@
           "label": "Mukautetun logon leveys"
         },
         "logo_position": {
-          "label": "Logon sijainti suurella näytöllä",
+          "label": "Logon sijainti tietokoneella",
           "options__1": {
             "label": "Keskellä vasemmalla"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Keskellä ylhäällä"
-          }
+          },
+          "info": "Sijainti optimoidaan automaattisesti mobiililaitteille."
         },
         "menu": {
           "label": "Valikko"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Suuri"
               },
-              "label": "Otsikon fonttikoko"
+              "label": "Otsikon koko"
             }
           }
         },
@@ -890,7 +891,7 @@
           "options__3": {
             "label": "Suuri"
           },
-          "label": "Kuvasuhde"
+          "label": "Kuvan korkeus"
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +916,68 @@
             "label": "Kuva ensin"
           },
           "options__2": {
-            "label": "Teksti ensin"
+            "label": "Toinen kuva"
           },
-          "label": "Työpöytäasettelu",
+          "label": "Työpöytäkuvan sijoitus",
           "info": "Kuva ensin on oletusarvoinen asettelu mobiilissa."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Pieni"
+          },
+          "options__2": {
+            "label": "Keskisuuri"
+          },
+          "options__3": {
+            "label": "Suuri"
+          },
+          "label": "Työpöytäkuvan leveys",
+          "info": "Kuva optimoidaan automaattisesti mobiililaitteille."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Työpöydän sisällön kohdistus"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Ylös"
+          },
+          "options__2": {
+            "label": "Keskelle"
+          },
+          "options__3": {
+            "label": "Alas"
+          },
+          "label": "Työpöytäsisällön sijainti"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Ei päällekkäisyyksiä"
+          },
+          "options__2": {
+            "label": "Päällekkäisyys"
+          },
+          "label": "Sisällön pohja"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Vasemmalla"
+          },
+          "options__2": {
+            "label": "Keskitetty"
+          },
+          "options__3": {
+            "label": "Oikealla"
+          },
+          "label": "Mobiilisisällön tasaus"
         }
       },
       "blocks": {
@@ -927,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "Otsikko"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Pieni"
+              },
+              "options__2": {
+                "label": "Keskisuuri"
+              },
+              "options__3": {
+                "label": "Suuri"
+              },
+              "label": "Otsikon koko"
             }
           }
         },
@@ -934,7 +1005,19 @@
           "name": "Teksti",
           "settings": {
             "text": {
-              "label": "Kuvaus"
+              "label": "Sisältö"
+            },
+            "text_style": {
+              "label": "Tekstityyli",
+              "options__1": {
+                "label": "Leipäteksti"
+              },
+              "options__2": {
+                "label": "Alaotsikko"
+              },
+              "options__3": {
+                "label": "Isot kirjaimet"
+              }
             }
           }
         },
@@ -947,6 +1030,35 @@
             },
             "button_link": {
               "label": "Painikelinkki"
+            }
+          }
+        },
+        "caption": {
+          "name": "Kuvateksti",
+          "settings": {
+            "text": {
+              "label": "Teksti"
+            },
+            "text_style": {
+              "label": "Tekstityyli",
+              "options__1": {
+                "label": "Alaotsikko"
+              },
+              "options__2": {
+                "label": "Isot kirjaimet"
+              }
+            },
+            "caption_size": {
+              "label": "Tekstin koko",
+              "options__1": {
+                "label": "Pieni"
+              },
+              "options__2": {
+                "label": "Keskisuuri"
+              },
+              "options__3": {
+                "label": "Suuri"
+              }
             }
           }
         }
@@ -1028,13 +1140,14 @@
           "label": "Näytä tekijä"
         },
         "layout": {
-          "label": "Asettelu suurilla näytöillä",
+          "label": "Työpöytäasettelu",
           "options__1": {
             "label": "Ruudukko"
           },
           "options__2": {
             "label": "Kollaasi"
-          }
+          },
+          "info": "Julkaisut asetetaan päällekkäin mobiilissa."
         },
         "image_height": {
           "label": "Esittelykuvan korkeus",
@@ -1141,7 +1254,7 @@
           "label": "Näytä kuvan reuna"
         },
         "collapse_on_larger_devices": {
-          "label": "Pienennä suuremmilla näytöillä"
+          "label": "Pienennä tietokoneella"
         },
         "show_rating": {
           "label": "Näytä tuotteen luokitus",
@@ -1470,10 +1583,44 @@
           "label": "Ota videosilmukka käyttöön"
         },
         "enable_sticky_info": {
-          "label": "Ota käyttöön kiinteät tuotetiedot suurilla näytöillä"
+          "label": "Ota käyttöön kiinnitettävä sisältö tietokoneella"
         },
         "hide_variants": {
           "label": "Piilota muiden versioiden aineisto, kun versio on valittu"
+        },
+        "gallery_layout": {
+          "label": "Työpöytäasettelu",
+          "options__1": {
+            "label": "Päällekkäin"
+          },
+          "options__2": {
+            "label": "Pikkukuvat"
+          },
+          "options__3": {
+            "label": "Pikkukuvien karuselli"
+          }
+        },
+        "media_size": {
+          "label": "Median koko tietokoneella",
+          "options__1": {
+            "label": "Pieni"
+          },
+          "options__2": {
+            "label": "Keskisuuri"
+          },
+          "options__3": {
+            "label": "Suuri"
+          },
+          "info": "Media optimoidaan automaattisesti mobiililaitteille."
+        },
+        "mobile_thumbnails": {
+          "label": "Mobiiliasettelu",
+          "options__1": {
+            "label": "Näytä pikkukuvat"
+          },
+          "options__2": {
+            "label": "Piilota pikkukuvat"
+          }
         }
       },
       "name": "Tuotetiedot"
@@ -1758,7 +1905,7 @@
               "options__2": {
                 "label": "Keskisuuri"
               },
-              "label": "Otsikon fonttikoko",
+              "label": "Otsikon koko",
               "options__3": {
                 "label": "Suuri"
               }
@@ -2213,7 +2360,8 @@
               },
               "options__9": {
                 "label": "Alhaalla oikealla"
-              }
+              },
+              "info": "Sijainti optimoidaan automaattisesti mobiililaitteille."
             },
             "show_text_box": {
               "label": "Näytä säilö pöytäkoneella"
