--- a/locales/fr.json
+++ b/locales/fr.json
@@ -73,14 +73,7 @@
     "loading": "Chargement en cours...",
     "skip_to_product_info": "Passer aux informations produits",
     "total_reviews": "total des critiques",
-    "star_reviews_info": "{{ rating_value }} sur {{ rating_max }} étoiles",
-    "load_slide": "Charger la diapositive",
-    "previous_slideshow": "Diapositive précédente",
-    "next_slideshow": "Diapositive suivante",
-    "pause_slideshow": "Interrompre le diaporama",
-    "play_slideshow": "Lire le diaporama",
-    "carousel": "Carrousel",
-    "slide": "Diapositive"
+    "star_reviews_info": "{{ rating_value }} sur {{ rating_max }} étoiles"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Actualiser"
       },
       "media": {
-        "open_featured_media": "Ouvrir les supports multimédia en vedette dans la vue de la galerie",
-        "open_media": "Ouvrir {{ index }} des supports multimédia dans la vue de la galerie",
+        "open_media": "Ouvrir le média {{ index }} dans une fenêtre modale",
         "play_model": "Lire la visionneuse 3D",
-        "play_video": "Lire la vidéo"
+        "play_video": "Lire la vidéo",
+        "gallery_viewer": "Visionneuse de la galerie",
+        "load_image": "Charger l'image {{ index }} dans la galerie",
+        "load_model": "Charger le modèle 3D {{ index }} dans la galerie",
+        "load_video": "Lire la vidéo {{ index }} dans la galerie",
+        "image_available": "L'image {{ index }} est maintenant disponible dans la galerie"
       },
       "view_full_details": "Afficher tous les détails",
       "include_taxes": "Taxes incluses.",
