--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -650,7 +650,7 @@
           "label": "Largeur personnalisée du logo"
         },
         "logo_position": {
-          "label": "Position du logo sur les grands écrans",
+          "label": "Emplacement du logo du bureau",
           "options__1": {
             "label": "Centré à gauche"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "En haut au centre"
-          }
+          },
+          "info": "L'emplacement est optimisée pour le mobile automatiquement."
         },
         "menu": {
           "label": "Menu"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Grand"
               },
-              "label": "Taille de la police du titre"
+              "label": "Taille du titre"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Grand"
           },
-          "label": "Rapport d'image"
+          "label": "Hauteur de l'image",
+          "info": "Détermine la hauteur de la section."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "L'image en premier"
           },
           "options__2": {
-            "label": "Le texte en premier"
+            "label": "Deuxième image"
           },
-          "label": "Mise en page du bureau",
+          "label": "Placement de l'image sur ordinateur",
           "info": "La mise en page par défaut pour les appareils mobiles est « Image en premier »."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Petit"
+          },
+          "options__2": {
+            "label": "Moyen"
+          },
+          "options__3": {
+            "label": "Grand"
+          },
+          "label": "Largeur d'image sur ordinateur",
+          "info": "L'image est automatiquement optimisée pour les mobiles."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu sur ordinateur"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Haut"
+          },
+          "options__2": {
+            "label": "Milieu"
+          },
+          "options__3": {
+            "label": "Bas"
+          },
+          "label": "Position du contenu sur ordinateur"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Aucun chevauchement"
+          },
+          "options__2": {
+            "label": "Chevauchement"
+          },
+          "label": "Mise en page du contenu"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Gauche"
+          },
+          "options__2": {
+            "label": "Centre"
+          },
+          "options__3": {
+            "label": "Droite"
+          },
+          "label": "Alignement du contenu sur mobile"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Titre"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Petit"
+              },
+              "options__2": {
+                "label": "Moyen"
+              },
+              "options__3": {
+                "label": "Grand"
+              },
+              "label": "Taille du titre"
             }
           }
         },
@@ -934,7 +1006,16 @@
           "name": "Texte",
           "settings": {
             "text": {
-              "label": "Description"
+              "label": "Contenu"
+            },
+            "text_style": {
+              "label": "Style de texte",
+              "options__1": {
+                "label": "Corps"
+              },
+              "options__2": {
+                "label": "Sous-titre"
+              }
             }
           }
         },
@@ -947,6 +1028,35 @@
             },
             "button_link": {
               "label": "Lien du bouton"
+            }
+          }
+        },
+        "caption": {
+          "name": "Légende",
+          "settings": {
+            "text": {
+              "label": "Texte"
+            },
+            "text_style": {
+              "label": "Style de texte",
+              "options__1": {
+                "label": "Sous-titre"
+              },
+              "options__2": {
+                "label": "Majuscule"
+              }
+            },
+            "caption_size": {
+              "label": "Taille du texte",
+              "options__1": {
+                "label": "Petit"
+              },
+              "options__2": {
+                "label": "Moyen"
+              },
+              "options__3": {
+                "label": "Grand"
+              }
             }
           }
         }
@@ -1028,13 +1138,14 @@
           "label": "Afficher l'auteur"
         },
         "layout": {
-          "label": "Mise en page sur les grands écrans",
+          "label": "Mise en page du bureau",
           "options__1": {
             "label": "Grille"
           },
           "options__2": {
             "label": "Collage"
-          }
+          },
+          "info": "Les publications sont empilées sur mobile."
         },
         "image_height": {
           "label": "Hauteur de l'image vedette",
@@ -1141,7 +1252,7 @@
           "label": "Afficher la bordure de l'image"
         },
         "collapse_on_larger_devices": {
-          "label": "Réduire sur les écrans plus grands"
+          "label": "Résuire sur le bureau"
         },
         "show_rating": {
           "label": "Afficher la note du produit",
@@ -1470,10 +1581,44 @@
           "label": "Activer le bouclage de la vidéo"
         },
         "enable_sticky_info": {
-          "label": "Activer les informations produits collées sur de grands écrans"
+          "label": "Activez le contenu de la note flottante sur le bureau"
         },
         "hide_variants": {
           "label": "Masquer les supports multimédias des autres variantes après la sélection d'une variante"
+        },
+        "gallery_layout": {
+          "label": "Mise en page du bureau",
+          "options__1": {
+            "label": "Empilé"
+          },
+          "options__2": {
+            "label": "Vignettes"
+          },
+          "options__3": {
+            "label": "Carousel de vignettes"
+          }
+        },
+        "media_size": {
+          "label": "Taille du support de bureau",
+          "info": "Les médias sont automatiquement optimisés pour les mobiles.",
+          "options__1": {
+            "label": "Petit"
+          },
+          "options__2": {
+            "label": "Moyen"
+          },
+          "options__3": {
+            "label": "Grand"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Mise en page sur mobile",
+          "options__1": {
+            "label": "Afficher les vignettes"
+          },
+          "options__2": {
+            "label": "Masquer les vignettes"
+          }
         }
       },
       "name": "Informations produits"
@@ -1758,7 +1903,7 @@
               "options__2": {
                 "label": "Moyen"
               },
-              "label": "Taille de la police du titre",
+              "label": "Taille du titre",
               "options__3": {
                 "label": "Grand"
               }
@@ -2214,7 +2359,8 @@
               },
               "options__9": {
                 "label": "En bas à droite"
-              }
+              },
+              "info": "L'emplacement est optimisé pour le mobile automatiquement."
             },
             "show_text_box": {
               "label": "Afficher le conteneur sur ordinateur"
