--- a/locales/id.json
+++ b/locales/id.json
@@ -73,14 +73,7 @@
     "loading": "Memuat...",
     "skip_to_product_info": "Langsung ke informasi produk",
     "total_reviews": "ulasan keseluruhan",
-    "star_reviews_info": "{{ rating_value }} dari {{ rating_max }} bintang",
-    "load_slide": "Muat slide",
-    "previous_slideshow": "Slide sebelumnya",
-    "next_slideshow": "Slide berikutnya",
-    "pause_slideshow": "Jeda slideshow",
-    "play_slideshow": "Putar slideshow",
-    "carousel": "Carousel",
-    "slide": "Geser"
+    "star_reviews_info": "{{ rating_value }} dari {{ rating_max }} bintang"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Muat ulang"
       },
       "media": {
-        "open_featured_media": "Buka media unggulan di tampilan galeri",
-        "open_media": "Buka media {{ index }} di tampilan galeri",
+        "open_media": "Buka media {{ index }} di modal",
         "play_model": "Putar Penampil 3D",
-        "play_video": "Putar video"
+        "play_video": "Putar video",
+        "gallery_viewer": "Penampil Galeri",
+        "load_image": "Muat gambar {{ index }} di tampilan galeri",
+        "load_model": "Muat Model 3D {{ index }} di tampilan galeri",
+        "load_video": "Putar video {{ index }} di tampilan galeri",
+        "image_available": "Gambar {{ index }} kini tersedia di tampilan galeri"
       },
       "view_full_details": "Lihat detail lengkap",
       "include_taxes": "Termasuk pajak.",
