--- a/locales/it.json
+++ b/locales/it.json
@@ -73,14 +73,7 @@
     "loading": "Caricamento in corso...",
     "skip_to_product_info": "Passa alle informazioni sul prodotto",
     "total_reviews": "recensioni totali",
-    "star_reviews_info": "{{ rating_value }} stelle su {{ rating_max }}",
-    "load_slide": "Carica slide",
-    "previous_slideshow": "Slide precedente",
-    "next_slideshow": "Slide successiva",
-    "pause_slideshow": "Metti in pausa",
-    "play_slideshow": "Avvia slideshow",
-    "carousel": "Carousel",
-    "slide": "Scorrimento"
+    "star_reviews_info": "{{ rating_value }} stelle su {{ rating_max }}"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Aggiorna"
       },
       "media": {
-        "open_featured_media": "Apri i contenuti multimediali in evidenza nella modalità galleria",
-        "open_media": "Apri {{ index }} dei contenuti multimediali nella modalità galleria",
+        "open_media": "Apri contenuti multimediali {{ index }} in finestra modale",
         "play_model": "Riproduci visualizzatore 3D",
-        "play_video": "Riproduci video"
+        "play_video": "Riproduci video",
+        "gallery_viewer": "Visualizzatore di galleria",
+        "load_image": "Carica immagine {{ index }} in visualizzazione galleria",
+        "load_model": "Carica modello 3D {{ index }} in visualizzazione galleria",
+        "load_video": "Riproduci video {{ index }} in visualizzazione galleria",
+        "image_available": "L'immagine {{ index }} è ora disponibile in visualizzazione galleria"
       },
       "view_full_details": "Visualizza dettagli completi",
       "include_taxes": "Imposte incluse.",
