--- a/locales/it.schema.json
+++ b/locales/it.schema.json
@@ -650,7 +650,7 @@
           "label": "Larghezza logo personalizzata"
         },
         "logo_position": {
-          "label": "Posizione del logo su schermi grandi",
+          "label": "Posizione logo su desktop",
           "options__1": {
             "label": "In mezzo a sinistra"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "In alto al centro"
-          }
+          },
+          "info": "Posizione automaticamente ottimizzata per dispositivi mobili."
         },
         "menu": {
           "label": "Menu"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Grande"
               },
-              "label": "Dimensione font titolo"
+              "label": "Dimensione del titolo"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Grande"
           },
-          "label": "Proporzioni delle immagini"
+          "label": "Altezza immagine",
+          "info": "Determina l'altezza della sezione."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Prima l'immagine"
           },
           "options__2": {
-            "label": "Prima il testo"
+            "label": "Seconda immagine"
           },
-          "label": "Layout desktop",
+          "label": "Posizionamento immagine su desktop",
           "info": "Il layout predefinito per dispositivi mobili prevede prima l'immagine."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Piccola"
+          },
+          "options__2": {
+            "label": "Media"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "label": "Larghezza immagine su desktop",
+          "info": "L'immagine viene automaticamente ottimizzata per il mobile."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su desktop",
+          "options__2": {
+            "label": "Al centro"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "In alto"
+          },
+          "options__2": {
+            "label": "Al centro"
+          },
+          "options__3": {
+            "label": "In basso"
+          },
+          "label": "Posizione contenuto su desktop"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Non sovrapporre"
+          },
+          "options__2": {
+            "label": "Sovrapponi"
+          },
+          "label": "Layout del contenuto"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "A sinistra"
+          },
+          "options__3": {
+            "label": "A destra"
+          },
+          "label": "Allineamento contenuto su mobile",
+          "options__2": {
+            "label": "Al centro"
+          }
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Titolo"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Piccola"
+              },
+              "options__2": {
+                "label": "Media"
+              },
+              "options__3": {
+                "label": "Grande"
+              },
+              "label": "Dimensione del titolo"
             }
           }
         },
@@ -934,7 +1006,19 @@
           "name": "Testo",
           "settings": {
             "text": {
-              "label": "Descrizione"
+              "label": "Contenuto"
+            },
+            "text_style": {
+              "label": "Stile del testo",
+              "options__1": {
+                "label": "Testo"
+              },
+              "options__2": {
+                "label": "Sottotitolo"
+              },
+              "options__3": {
+                "label": "Maiuscolo"
+              }
             }
           }
         },
@@ -947,6 +1031,35 @@
             },
             "button_link": {
               "label": "Link pulsante"
+            }
+          }
+        },
+        "caption": {
+          "name": "Didascalia",
+          "settings": {
+            "text": {
+              "label": "Testo"
+            },
+            "text_style": {
+              "label": "Stile testo",
+              "options__1": {
+                "label": "Sottotitolo"
+              },
+              "options__2": {
+                "label": "Maiuscolo"
+              }
+            },
+            "caption_size": {
+              "label": "Dimensione del testo",
+              "options__1": {
+                "label": "Piccola"
+              },
+              "options__2": {
+                "label": "Media"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
             }
           }
         }
@@ -1028,13 +1141,14 @@
           "label": "Mostra autore"
         },
         "layout": {
-          "label": "Layout su schermi grandi",
+          "label": "Layout desktop",
           "options__1": {
             "label": "Griglia"
           },
           "options__2": {
             "label": "Collage"
-          }
+          },
+          "info": "I post sono visualizzati in elenco sui dispositivi mobili."
         },
         "image_height": {
           "label": "Altezza immagine in evidenza",
@@ -1141,7 +1255,7 @@
           "label": "Mostra bordo immagine"
         },
         "collapse_on_larger_devices": {
-          "label": "Comprimi sugli schermi più grandi"
+          "label": "Comprimi su desktop"
         },
         "show_rating": {
           "label": "Mostra valutazione del prodotto",
@@ -1471,10 +1585,44 @@
           "label": "Abilita la riproduzione in loop dei video"
         },
         "enable_sticky_info": {
-          "label": "Abilita le informazioni di prodotto fisse su schermi grandi"
+          "label": "Abilita contenuto fisso su desktop"
         },
         "hide_variants": {
           "label": "Nascondi i contenuti multimediali delle altre varianti dopo averne selezionata una"
+        },
+        "gallery_layout": {
+          "label": "Layout desktop",
+          "options__1": {
+            "label": "Elencato"
+          },
+          "options__2": {
+            "label": "Miniature"
+          },
+          "options__3": {
+            "label": "Carosello miniature"
+          }
+        },
+        "media_size": {
+          "label": "Dimensioni contenuti multimediali desktop",
+          "options__1": {
+            "label": "Piccola"
+          },
+          "options__2": {
+            "label": "Media"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "info": "Contenuti multimediali automaticamente ottimizzati per dispositivi mobili."
+        },
+        "mobile_thumbnails": {
+          "label": "Layout dispositivo mobile",
+          "options__1": {
+            "label": "Mostra miniature"
+          },
+          "options__2": {
+            "label": "Nascondi miniature"
+          }
         }
       }
     },
@@ -1758,7 +1906,7 @@
               "options__2": {
                 "label": "Media"
               },
-              "label": "Dimensione font titolo",
+              "label": "Dimensione titolo",
               "options__3": {
                 "label": "Grande"
               }
@@ -2302,7 +2450,8 @@
               },
               "options__9": {
                 "label": "In basso a destra"
-              }
+              },
+              "info": "Posizione automaticamente ottimizzata per dispositivi mobili."
             },
             "show_text_box": {
               "label": "Mostra contenitore sul desktop"
