--- a/locales/ja.json
+++ b/locales/ja.json
@@ -73,14 +73,7 @@
     "loading": "読み込み中…",
     "skip_to_product_info": "商品情報にスキップ",
     "total_reviews": "レビュー数の合計",
-    "star_reviews_info": "{{ rating_max }}つ星中{{ rating_value }}つ",
-    "load_slide": "スライドを読み込む",
-    "previous_slideshow": "前のスライド",
-    "next_slideshow": "次のスライド",
-    "pause_slideshow": "スライドショーを一時停止する",
-    "play_slideshow": "スライドショーを再生する",
-    "carousel": "カルーセル",
-    "slide": "スライド"
+    "star_reviews_info": "{{ rating_max }}つ星中{{ rating_value }}つ"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "更新"
       },
       "media": {
-        "open_featured_media": "ギャラリービューで掲載されているメディアを開く",
-        "open_media": "ギャラリービューで掲載されているメディア{{ index }}を開く",
+        "open_media": "モーダルでメディア ({{ index }}) を開く",
         "play_model": "3Dビューアーの再生",
-        "play_video": "ビデオを再生"
+        "play_video": "ビデオを再生",
+        "gallery_viewer": "ギャラリービュー",
+        "load_image": "ギャラリービューに画像 ({{ index }}) を読み込む",
+        "load_model": "ギャラリービューに3Dモデル ({{ index }}) を読み込む",
+        "load_video": "ギャラリービューでビデオ ({{ index }}) を再生する",
+        "image_available": "ギャラリービューで画像 ({{ index }}) が利用できるようになりました"
       },
       "view_full_details": "詳細を表示する",
       "include_taxes": "税込み。",
