--- a/locales/ja.schema.json
+++ b/locales/ja.schema.json
@@ -650,7 +650,7 @@
           "label": "ロゴの幅をカスタマイズする"
         },
         "logo_position": {
-          "label": "大画面でのロゴの位置",
+          "label": "デスクトップのロゴ位置",
           "options__1": {
             "label": "中央部左側"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "上部中央"
-          }
+          },
+          "info": "位置はモバイル用に自動で最適化されます。"
         },
         "menu": {
           "label": "メニュー"
@@ -819,7 +820,7 @@
               "options__2": {
                 "label": "大"
               },
-              "label": "見出しのフォントサイズ"
+              "label": "見出しのサイズ"
             }
           },
           "name": "見出し"
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "大"
           },
-          "label": "画像比"
+          "label": "画像の高さ",
+          "info": "セクションの高さを決めます。"
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "最初の画像"
           },
           "options__2": {
-            "label": "最初のテキスト"
+            "label": "画像の表示秒数"
           },
-          "label": "デスクトップのレイアウト",
+          "label": "デスクトップ画像の配置",
           "info": "最初の画像は、デフォルトのモバイルレイアウトです。"
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "小"
+          },
+          "options__2": {
+            "label": "中"
+          },
+          "options__3": {
+            "label": "大"
+          },
+          "label": "デスクトップ画像の幅",
+          "info": "画像はモバイル用に自動で最適化されます。"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "デスクトップのコンテンツアラインメント",
+          "options__2": {
+            "label": "中央"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "上"
+          },
+          "options__2": {
+            "label": "中位"
+          },
+          "options__3": {
+            "label": "下"
+          },
+          "label": "デスクトップのコンテンツ位置"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "オーバーラップなし"
+          },
+          "options__2": {
+            "label": "オーバーラップ"
+          },
+          "label": "コンテンツのレイアウト"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "左"
+          },
+          "options__3": {
+            "label": "右"
+          },
+          "label": "モバイルのコンテンツアライメント",
+          "options__2": {
+            "label": "中央"
+          }
         }
       },
       "blocks": {
@@ -926,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "見出し"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              },
+              "label": "見出しのサイズ"
             }
           },
           "name": "見出し"
@@ -933,7 +1005,16 @@
         "text": {
           "settings": {
             "text": {
-              "label": "説明"
+              "label": "コンテンツ"
+            },
+            "text_style": {
+              "label": "テキストスタイル",
+              "options__1": {
+                "label": "本文"
+              },
+              "options__2": {
+                "label": "字幕"
+              }
             }
           },
           "name": "テキスト"
@@ -949,6 +1030,35 @@
             }
           },
           "name": "ボタン"
+        },
+        "caption": {
+          "name": "キャプション",
+          "settings": {
+            "text": {
+              "label": "テキスト"
+            },
+            "text_style": {
+              "label": "テキストスタイル",
+              "options__1": {
+                "label": "サブタイトル"
+              },
+              "options__2": {
+                "label": "大文字"
+              }
+            },
+            "caption_size": {
+              "label": "テキストサイズ",
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              }
+            }
+          }
         }
       },
       "presets": {
@@ -1028,13 +1138,14 @@
           "label": "執筆者を表示する"
         },
         "layout": {
-          "label": "大画面でのレイアウト",
+          "label": "デスクトップのレイアウト",
           "options__1": {
             "label": "グリッド"
           },
           "options__2": {
             "label": "コラージュ"
-          }
+          },
+          "info": "モバイルでは投稿が重複してしまいます。"
         },
         "image_height": {
           "label": "記事のサムネイルの高さ",
@@ -1141,7 +1252,7 @@
           "label": "画像の枠線を表示する"
         },
         "collapse_on_larger_devices": {
-          "label": "大画面で折りたたむ"
+          "label": "デスクトップで折りたたむ"
         },
         "show_rating": {
           "label": "商品の評価を表示",
@@ -1471,10 +1582,44 @@
           "label": "ビデオループを有効にする"
         },
         "enable_sticky_info": {
-          "label": "大画面で商品情報のスティッキー表示を有効にする"
+          "label": "デスクトップ上のコンテンツ固定表示を有効にする"
         },
         "hide_variants": {
           "label": "バリエーションを選択した後、他のバリエーションのメディアを非表示にする"
+        },
+        "gallery_layout": {
+          "label": "デスクトップのレイアウト",
+          "options__1": {
+            "label": "スタックされました"
+          },
+          "options__2": {
+            "label": "サムネイル"
+          },
+          "options__3": {
+            "label": "サムネイルカルーセル"
+          }
+        },
+        "media_size": {
+          "label": "デスクトップのメディアサイズ",
+          "options__1": {
+            "label": "小"
+          },
+          "options__2": {
+            "label": "中"
+          },
+          "options__3": {
+            "label": "大"
+          },
+          "info": "メディアはモバイル用に自動で最適化されます。"
+        },
+        "mobile_thumbnails": {
+          "label": "モバイルのレイアウト",
+          "options__1": {
+            "label": "サムネイルを表示する"
+          },
+          "options__2": {
+            "label": "サムネイルを非表示にする"
+          }
         }
       }
     },
@@ -1757,7 +1902,7 @@
               "options__2": {
                 "label": "中"
               },
-              "label": "見出しのフォントサイズ",
+              "label": "見出しのサイズ",
               "options__3": {
                 "label": "大"
               }
@@ -2132,102 +2277,14 @@
             "label": "数字"
           }
         },
-        "heading_size": {
-          "label": "見出しのフォントサイズ",
-          "options__1": {
-            "label": "中"
-          },
-          "options__2": {
-            "label": "大"
-          }
-        },
-        "box_align": {
-          "label": "デスクトップのコンテンツ位置",
-          "options__1": {
-            "label": "左上"
-          },
-          "options__2": {
-            "label": "上部中央"
-          },
-          "options__3": {
-            "label": "右上"
-          },
-          "options__4": {
-            "label": "中央部左側"
-          },
-          "options__5": {
-            "label": "中心"
-          },
-          "options__6": {
-            "label": "中央部右側"
-          },
-          "options__7": {
-            "label": "左下"
-          },
-          "options__8": {
-            "label": "下部中央"
-          },
-          "options__9": {
-            "label": "右下"
-          }
-        },
-        "show_text_box": {
-          "label": "デスクトップ上にコンテナを表示"
-        },
-        "text_alignment": {
-          "label": "デスクトップのコンテンツアラインメント",
-          "option_1": {
-            "label": "左"
-          },
-          "option_2": {
-            "label": "中央"
-          },
-          "option_3": {
-            "label": "右"
-          }
-        },
-        "image_overlay_opacity": {
-          "label": "画像のオーバーレイ不透明率"
-        },
         "auto_rotate": {
           "label": "スライドの自動切り替え"
         },
         "change_slides_speed": {
           "label": "スライドを変更する間隔"
         },
-        "color_scheme": {
-          "label": "ボックスの配色",
-          "info": "コンテナが表示された時に表示。",
-          "options__1": {
-            "label": "アクセント1"
-          },
-          "options__2": {
-            "label": "アクセント2"
-          },
-          "options__3": {
-            "label": "背景1"
-          },
-          "options__4": {
-            "label": "背景2"
-          },
-          "options__5": {
-            "label": "反転"
-          }
-        },
         "mobile": {
           "content": "モバイルのレイアウト"
-        },
-        "text_alignment_mobile": {
-          "label": "モバイルのコンテンツアライメント",
-          "options__1": {
-            "label": "左"
-          },
-          "options__2": {
-            "label": "中央"
-          },
-          "options__3": {
-            "label": "右"
-          }
         },
         "show_text_below": {
           "label": "モバイルで画像の下にコンテンツを表示する"
@@ -2256,8 +2313,7 @@
               "info": "ボタンを非表示にするには、ラベルを空白にします。"
             },
             "link": {
-              "label": "ボタンのリンク",
-              "info": "ボタンを非表示にするには、ラベルを空白にします。"
+              "label": "ボタンのリンク"
             },
             "secondary_style": {
               "label": "アウトラインボタンのスタイルを使用する"
@@ -2302,7 +2358,8 @@
               },
               "options__9": {
                 "label": "右下"
-              }
+              },
+              "info": "位置はモバイル用に自動で最適化されます。"
             },
             "show_text_box": {
               "label": "デスクトップ上にコンテナを表示"
