--- a/locales/lt-LT.json
+++ b/locales/lt-LT.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Pereiti prie informacijos apie gaminį",
     "total_reviews": "iš viso apžvalgų",
-    "star_reviews_info": "{{ rating_value }} iš {{ rating_max }} žvaigždučių",
-    "load_slide": "Įkelti skaidrę",
-    "previous_slideshow": "Ankstesnė skaidrė",
-    "next_slideshow": "Kita skaidrė",
-    "pause_slideshow": "Pristabdyti skaidrių peržiūrą",
-    "play_slideshow": "Leisti skaidrių peržiūrą",
-    "carousel": "Karuselė",
-    "slide": "Skaidrė"
+    "star_reviews_info": "{{ rating_value }} iš {{ rating_max }} žvaigždučių"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Atnaujinti"
       },
       "media": {
-        "open_featured_media": "Atidaryti siūlomą mediją galerijos rodinyje",
-        "open_media": "Atidaryti mediją {{ index }} galerijos rodinyje",
+        "open_media": "Atidaryti mediją {{ index }} modaliniame lange",
         "play_model": "Paleisti 3D peržiūros programą",
-        "play_video": "Paleisti vaizdo įrašą"
+        "play_video": "Paleisti vaizdo įrašą",
+        "gallery_viewer": "Galerijos žiūryklė",
+        "load_image": "Įkelti vaizdą {{ index }} į galerijos rodinį",
+        "load_model": "Įkelti trimatį modelį {{ index }} į galerijos rodinį",
+        "load_video": "Leisti vaizdo įrašą {{ index }} galerijos rodinyje",
+        "image_available": "Vaizdas {{ index }} dabar prieinamas galerijos rodinyje"
       },
       "view_full_details": "Žiūrėti visą informaciją",
       "include_taxes": "Mokesčiai įtraukti.",
