--- a/locales/nb.json
+++ b/locales/nb.json
@@ -73,14 +73,7 @@
     "loading": "Laster inn …",
     "skip_to_product_info": "Hopp til produktinformasjon",
     "total_reviews": "totale omtaler",
-    "star_reviews_info": "{{ rating_value }} av {{ rating_max }} stjerner",
-    "load_slide": "Last inn lysbilde",
-    "previous_slideshow": "Forrige lysbilde",
-    "next_slideshow": "Neste lysbilde",
-    "pause_slideshow": "Sett lysbildefremvisningen på pause",
-    "play_slideshow": "Spill av lysbildefremvisningen",
-    "carousel": "Karusell",
-    "slide": "Lysbilde"
+    "star_reviews_info": "{{ rating_value }} av {{ rating_max }} stjerner"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Oppdater"
       },
       "media": {
-        "open_featured_media": "Åpne fremhevet medie i gallerivisning",
-        "open_media": "Åpne medie {{ index }} i gallerivisning",
+        "open_media": "Åpne medie {{ index }} i modal",
         "play_model": "Spill 3D-visning",
-        "play_video": "Spill av video"
+        "play_video": "Spill av video",
+        "gallery_viewer": "Gallerivisning",
+        "load_image": "Last inn bilde {{ index }} i gallerivisning",
+        "load_model": "Last inn 3D-modell {{ index }} i gallerivisning",
+        "load_video": "Spill av video {{ index }} i gallerivisning",
+        "image_available": "Bilde {{ index }} er nå tilgjengelig i gallerivisning"
       },
       "view_full_details": "Vis alle detaljer",
       "include_taxes": "Avgift inkludert.",
