--- a/locales/nb.schema.json
+++ b/locales/nb.schema.json
@@ -650,7 +650,7 @@
           "label": "Egendefinert logobredde"
         },
         "logo_position": {
-          "label": "Logoplassering på store skjermer",
+          "label": "Logoplassering på datamaskiner",
           "options__1": {
             "label": "Midt til venstre"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Toppsentrert"
-          }
+          },
+          "info": "Posisjonen optimaliseres automatisk for mobil."
         },
         "menu": {
           "label": "Meny"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Stor"
               },
-              "label": "Skriftstørrelse for overskrift"
+              "label": "Overskriftsstørrelse"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Stor"
           },
-          "label": "Bildeforhold"
+          "label": "Bildehøyde",
+          "info": "Avgjør seksjonens høyde."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Bilde først"
           },
           "options__2": {
-            "label": "Tekst først"
+            "label": "Andre bilde"
           },
-          "label": "Layout på datamaskin",
+          "label": "Bildeplassering på datamaskin",
           "info": "Bilde først er standardlayout for mobil."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Liten"
+          },
+          "options__2": {
+            "label": "Middels"
+          },
+          "options__3": {
+            "label": "Stor"
+          },
+          "label": "Bildebredde på datamaskiner",
+          "info": "Bildet optimaliseres automatisk for mobil."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Sentrert"
+          },
+          "options__3": {
+            "label": "Høyre"
+          },
+          "label": "Innholdsjustering på datamaskin"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Topp"
+          },
+          "options__2": {
+            "label": "Midten"
+          },
+          "options__3": {
+            "label": "Bunn"
+          },
+          "label": "Innholdsplassering på datamaskin"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Ingen overlapping"
+          },
+          "options__2": {
+            "label": "Overlapping"
+          },
+          "label": "Innholdslayout"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Venstre"
+          },
+          "options__2": {
+            "label": "Sentrert"
+          },
+          "options__3": {
+            "label": "Høyre"
+          },
+          "label": "Innholdsjustering på mobiltelefon"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Overskrift"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Liten"
+              },
+              "options__2": {
+                "label": "Middels"
+              },
+              "options__3": {
+                "label": "Stor"
+              },
+              "label": "Overskriftsstørrelse"
             }
           }
         },
@@ -934,7 +1006,16 @@
           "name": "Tekst",
           "settings": {
             "text": {
-              "label": "Beskrivelse"
+              "label": "Innhold"
+            },
+            "text_style": {
+              "label": "Tekststil",
+              "options__1": {
+                "label": "Brødtekst"
+              },
+              "options__2": {
+                "label": "Undertekst"
+              }
             }
           }
         },
@@ -947,6 +1028,35 @@
             },
             "button_link": {
               "label": "Knappekobling"
+            }
+          }
+        },
+        "caption": {
+          "name": "Bildetekst",
+          "settings": {
+            "text": {
+              "label": "Tekst"
+            },
+            "text_style": {
+              "label": "Tekststil",
+              "options__1": {
+                "label": "Undertekst"
+              },
+              "options__2": {
+                "label": "Store bokstaver"
+              }
+            },
+            "caption_size": {
+              "label": "Tekststørrelse",
+              "options__1": {
+                "label": "Liten"
+              },
+              "options__2": {
+                "label": "Middels"
+              },
+              "options__3": {
+                "label": "Stor"
+              }
             }
           }
         }
@@ -1028,13 +1138,14 @@
           "label": "Vis forfatter"
         },
         "layout": {
-          "label": "Layout på store skjermer",
+          "label": "Layout på datamaskiner",
           "options__1": {
             "label": "Rutenett"
           },
           "options__2": {
             "label": "Fotomontasje"
-          }
+          },
+          "info": "Innlegg stables på mobil."
         },
         "image_height": {
           "label": "Høyde på fremhevet bilde",
@@ -1141,7 +1252,7 @@
           "label": "Vis kantlinje for bilde"
         },
         "collapse_on_larger_devices": {
-          "label": "Lukk på større skjermer"
+          "label": "Lukk på datamaskiner"
         },
         "show_rating": {
           "label": "Vis produktvurdering",
@@ -1470,10 +1581,44 @@
           "label": "Aktiver løkkeavspilling av video"
         },
         "enable_sticky_info": {
-          "label": "Aktiver festet produktinformasjon på store skjermer"
+          "label": "Aktiver festet innhold på datamaskiner"
         },
         "hide_variants": {
           "label": "Skjul andre varianters medier etter å ha valgt en variant"
+        },
+        "gallery_layout": {
+          "label": "Layout på datamaskiner",
+          "options__1": {
+            "label": "Stablet"
+          },
+          "options__2": {
+            "label": "Miniatyrbilder"
+          },
+          "options__3": {
+            "label": "Karusell med miniatyrbilder"
+          }
+        },
+        "media_size": {
+          "label": "Størrelse på medier på datamaskiner",
+          "info": "Medier optimaliseres automatisk for mobil.",
+          "options__1": {
+            "label": "Liten"
+          },
+          "options__2": {
+            "label": "Middels"
+          },
+          "options__3": {
+            "label": "Stor"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Mobillayout",
+          "options__1": {
+            "label": "Vis miniatyrbilder"
+          },
+          "options__2": {
+            "label": "Skjul miniatyrbilder"
+          }
         }
       },
       "name": "Produktinformasjon"
@@ -1758,7 +1903,7 @@
               "options__2": {
                 "label": "Middels"
               },
-              "label": "Skriftstørrelse for overskrift",
+              "label": "Overskriftsstørrelse",
               "options__3": {
                 "label": "Stor"
               }
@@ -2213,7 +2358,8 @@
               },
               "options__9": {
                 "label": "Nederst til høyre"
-              }
+              },
+              "info": "Posisjonen optimaliseres automatisk for mobil."
             },
             "show_text_box": {
               "label": "Vis beholder på datamaskin"
