--- a/locales/nl.json
+++ b/locales/nl.json
@@ -73,14 +73,7 @@
     "loading": "Bezig met laden...",
     "skip_to_product_info": "Ga direct naar productinformatie",
     "total_reviews": "totaal aantal recensies",
-    "star_reviews_info": "{{ rating_value }} van de {{ rating_max }} sterren",
-    "load_slide": "Dia laden",
-    "previous_slideshow": "Vorige dia",
-    "next_slideshow": "Volgende dia",
-    "pause_slideshow": "Diavoorstelling pauzeren",
-    "play_slideshow": "Diavoorstelling afspelen",
-    "carousel": "Carrousel",
-    "slide": "Dia"
+    "star_reviews_info": "{{ rating_value }} van de {{ rating_max }} sterren"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Vernieuwen"
       },
       "media": {
-        "open_featured_media": "Uitgelichte media openen in galerieweergave",
-        "open_media": "{{ index }} van media openen in galerieweergave",
+        "open_media": "Media {{ index }} openen in modaal",
         "play_model": "3D-viewer afspelen",
-        "play_video": "Video afspelen"
+        "play_video": "Video afspelen",
+        "gallery_viewer": "Gallery-weergave",
+        "load_image": "Afbeelding {{ index }} laden in gallery-weergave",
+        "load_model": "3D-model {{ index }} laden in gallery-weergave",
+        "load_video": "Video {{ index }} afspelen in gallery-weergave",
+        "image_available": "Afbeelding {{ index }} is nu beschikbaar in gallery-weergave"
       },
       "view_full_details": "Alle details bekijken",
       "include_taxes": "Inclusief btw.",
