--- a/locales/pl.json
+++ b/locales/pl.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Pomiń, aby przejść do informacji o produkcie",
     "total_reviews": "suma recenzji",
-    "star_reviews_info": "{{ rating_value }} z {{ rating_max }} gwiazdek",
-    "load_slide": "Wczytaj slajd",
-    "previous_slideshow": "Poprzedni slajd",
-    "next_slideshow": "Następny slajd",
-    "pause_slideshow": "Wstrzymaj pokaz slajdów",
-    "play_slideshow": "Odtwórz pokaz slajdów",
-    "carousel": "Karuzela",
-    "slide": "Slajd"
+    "star_reviews_info": "{{ rating_value }} z {{ rating_max }} gwiazdek"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Odśwież"
       },
       "media": {
-        "open_featured_media": "Otwórz prezentowane multimedia w widoku galerii",
-        "open_media": "Otwórz multimedia {{ index }} w widoku galerii",
+        "open_media": "Otwórz multimedia {{ index }} w oknie modalnym",
         "play_model": "Uruchom przeglądarkę 3D",
-        "play_video": "Odtwórz film"
+        "play_video": "Odtwórz film",
+        "gallery_viewer": "Przeglądarka galerii",
+        "load_image": "Załaduj obraz {{ index }} do widoku galerii",
+        "load_model": "Załaduj model 3D {{ index }} do widoku galerii",
+        "load_video": "Odtwórz film {{ index }} w widoku galerii",
+        "image_available": "Obraz {{ index }} jest teraz dostępny w widoku galerii"
       },
       "view_full_details": "Pokaż kompletne dane",
       "include_taxes": "Z wliczonym podatkiem.",
