--- a/locales/pl.schema.json
+++ b/locales/pl.schema.json
@@ -650,7 +650,7 @@
           "label": "Niestandardowa szerokość logo"
         },
         "logo_position": {
-          "label": "Pozycja logo na dużych ekranach",
+          "label": "Pozycja logo na komputerze",
           "options__1": {
             "label": "Do środka, do lewej"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Do góry, wyśrodkowany"
-          }
+          },
+          "info": "Pozycja jest automatycznie optymalizowana dla urządzeń mobilnych."
         },
         "menu": {
           "label": "Menu"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Duży"
               },
-              "label": "Rozmiar czcionki nagłówka"
+              "label": "Rozmiar nagłówka"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Duży"
           },
-          "label": "Proporcja obrazu"
+          "label": "Wysokość obrazu",
+          "info": "Określa wysokość sekcji."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Najpierw obraz"
           },
           "options__2": {
-            "label": "Najpierw tekst"
+            "label": "Drugi obraz"
           },
-          "label": "Układ pulpitu",
+          "label": "Umieszczanie obrazów na pulpicie",
           "info": "Najpierw obraz to domyślny układ na urządzeniu mobilnym"
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Mały"
+          },
+          "options__2": {
+            "label": "Średni"
+          },
+          "options__3": {
+            "label": "Duży"
+          },
+          "label": "Szerokość obrazu pulpitu",
+          "info": "Obraz jest automatycznie optymalizowany dla urządzeń mobilnych."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na komputerze"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Góra"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Dół"
+          },
+          "label": "Pozycja treści na pulpicie"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Bez nakładania"
+          },
+          "options__2": {
+            "label": "Nakładanie się"
+          },
+          "label": "Układ zawartości"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          },
+          "label": "Wyrównanie treści na urządzeniu mobilnym"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Nagłówek"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Mały"
+              },
+              "options__2": {
+                "label": "Średni"
+              },
+              "options__3": {
+                "label": "Duży"
+              },
+              "label": "Rozmiar nagłówka"
             }
           }
         },
@@ -934,7 +1006,19 @@
           "name": "Tekst",
           "settings": {
             "text": {
-              "label": "Opis"
+              "label": "Treść"
+            },
+            "text_style": {
+              "label": "Styl tekstu",
+              "options__1": {
+                "label": "Tekst podstawowy"
+              },
+              "options__2": {
+                "label": "Podtytuł"
+              },
+              "options__3": {
+                "label": "Duże litery"
+              }
             }
           }
         },
@@ -947,6 +1031,35 @@
             },
             "button_link": {
               "label": "Link przycisku"
+            }
+          }
+        },
+        "caption": {
+          "name": "Napisy",
+          "settings": {
+            "text": {
+              "label": "Tekst"
+            },
+            "text_style": {
+              "label": "Styl tekstu",
+              "options__1": {
+                "label": "Podtytuł"
+              },
+              "options__2": {
+                "label": "Duże litery"
+              }
+            },
+            "caption_size": {
+              "label": "Rozmiar tekstu",
+              "options__1": {
+                "label": "Mały"
+              },
+              "options__2": {
+                "label": "Średni"
+              },
+              "options__3": {
+                "label": "Duży"
+              }
             }
           }
         }
@@ -1028,13 +1141,14 @@
           "label": "Pokaż autora"
         },
         "layout": {
-          "label": "Układ na dużych ekranach",
+          "label": "Układ na komputerze",
           "options__1": {
             "label": "Siatka"
           },
           "options__2": {
             "label": "Kolaż"
-          }
+          },
+          "info": "Posty są umieszczane jeden na drugim na urządzeniu mobilnym."
         },
         "image_height": {
           "label": "Wysokość wyróżnionego obrazu",
@@ -1141,7 +1255,7 @@
           "label": "Pokaż obramowanie obrazu"
         },
         "collapse_on_larger_devices": {
-          "label": "Zwiń na większych ekranach"
+          "label": "Zwiń na komputerze"
         },
         "show_rating": {
           "label": "Pokaż ocenę produktu",
@@ -1471,10 +1585,44 @@
           "label": "Włącz zapętlanie wideo"
         },
         "enable_sticky_info": {
-          "label": "Włącz przypiętą informację o produkcie na dużych ekranach"
+          "label": "Włącz przypiętą zawartość na komputerze"
         },
         "hide_variants": {
           "label": "Ukryj multimedia innych wariantów po wybraniu wariantu"
+        },
+        "gallery_layout": {
+          "label": "Układ pulpitu",
+          "options__1": {
+            "label": "Ułożone w stos"
+          },
+          "options__2": {
+            "label": "Miniatury"
+          },
+          "options__3": {
+            "label": "Karuzela z miniaturami"
+          }
+        },
+        "media_size": {
+          "label": "Rozmiar plików multimedialnych dla komputera",
+          "options__1": {
+            "label": "Mały"
+          },
+          "options__2": {
+            "label": "Średni"
+          },
+          "options__3": {
+            "label": "Duży"
+          },
+          "info": "Pliki multimedialne są automatycznie optymalizowane dla urządzeń mobilnych."
+        },
+        "mobile_thumbnails": {
+          "label": "Układ na urządzeniu mobilnym",
+          "options__1": {
+            "label": "Pokaż miniatury"
+          },
+          "options__2": {
+            "label": "Ukryj miniatury"
+          }
         }
       }
     },
@@ -1678,7 +1826,7 @@
       }
     },
     "product-recommendations": {
-      "name": "Rekomendacje produktu",
+      "name": "Rekomendacje produktów",
       "settings": {
         "heading": {
           "label": "Nagłówek"
@@ -1758,7 +1906,7 @@
               "options__2": {
                 "label": "Średni"
               },
-              "label": "Rozmiar czcionki nagłówka",
+              "label": "Rozmiar nagłówka",
               "options__3": {
                 "label": "Duży"
               }
@@ -2213,7 +2361,8 @@
               },
               "options__9": {
                 "label": "Prawy dolny"
-              }
+              },
+              "info": "Pozycja jest automatycznie optymalizowana dla urządzeń mobilnych."
             },
             "show_text_box": {
               "label": "Pokaż kontener na komputerze"
