--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -73,14 +73,7 @@
     "loading": "Carregando...",
     "skip_to_product_info": "Pular para as informações do produto",
     "total_reviews": "total de avaliações",
-    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas",
-    "load_slide": "Carregar slide",
-    "previous_slideshow": "Slide anterior",
-    "next_slideshow": "Próximo slide",
-    "pause_slideshow": "Pausar apresentação de slides",
-    "play_slideshow": "Reproduzir apresentação de slides",
-    "carousel": "Carrossel",
-    "slide": "Slide"
+    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Atualizar"
       },
       "media": {
-        "open_featured_media": "Abrir a mídia em destaque na visualização em galeria",
-        "open_media": "Abrir mídia {{ index }} na visualização em galeria",
+        "open_media": "Abrir mídia {{ index }} na janela modal",
         "play_model": "Reproduzir o visualizador em 3D",
-        "play_video": "Reproduzir vídeo"
+        "play_video": "Reproduzir vídeo",
+        "gallery_viewer": "Visualizador da galeria",
+        "load_image": "Carregar imagem {{ index }} no visualizador da galeria",
+        "load_model": "Carregar modelo 3D {{ index }} no visualizador da galeria",
+        "load_video": "Reproduzir vídeo {{ index }} no visualizador da galeria",
+        "image_available": "A imagem {{ index }} está disponível no visualizador da galeria"
       },
       "view_full_details": "Ver informações completas",
       "include_taxes": "Tributo incluído.",
