--- a/locales/pt-BR.schema.json
+++ b/locales/pt-BR.schema.json
@@ -178,7 +178,7 @@
       "name": "Favicon",
       "settings": {
         "favicon": {
-          "label": "Imagem favicon",
+          "label": "Imagem de favicon",
           "info": "Será reduzida para 32 x 32 pixels"
         }
       }
@@ -650,7 +650,7 @@
           "label": "Largura personalizada do logo"
         },
         "logo_position": {
-          "label": "Posição do logo em telas grandes",
+          "label": "Posição do logo no desktop",
           "options__1": {
             "label": "Centralizado à esquerda"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Centralizado na parte superior"
-          }
+          },
+          "info": "A posição é otimizada automaticamente para dispositivos móveis."
         },
         "menu": {
           "label": "Menu"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Grande"
               },
-              "label": "Tamanho da fonte do título"
+              "label": "Tamanho do título"
             }
           }
         },
@@ -890,7 +891,7 @@
           "options__3": {
             "label": "Grande"
           },
-          "label": "Proporção da imagem"
+          "label": "Altura da imagem"
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +916,68 @@
             "label": "Imagem primeiro"
           },
           "options__2": {
-            "label": "Texto primeiro"
+            "label": "Segunda imagem"
           },
-          "label": "Layout para desktop",
+          "label": "Posicionamento da imagem no desktop",
           "info": "O layout padrão para dispositivos móveis coloca a imagem primeiro."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Pequena"
+          },
+          "options__2": {
+            "label": "Média"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "label": "Largura da imagem no desktop",
+          "info": "A imagem é otimizada automaticamente em dispositivos móveis."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento de conteúdo no desktop"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Parte superior"
+          },
+          "options__2": {
+            "label": "Meio"
+          },
+          "options__3": {
+            "label": "Parte inferior"
+          },
+          "label": "Posição do conteúdo no desktop"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Sem sobreposição"
+          },
+          "options__2": {
+            "label": "Com sobreposição"
+          },
+          "label": "Layout do conteúdo"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__2": {
+            "label": "Centro"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento de conteúdo em dispositivos móveis"
         }
       },
       "blocks": {
@@ -927,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "Título"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Pequeno"
+              },
+              "options__2": {
+                "label": "Médio"
+              },
+              "options__3": {
+                "label": "Grande"
+              },
+              "label": "Tamanho do título"
             }
           }
         },
@@ -934,7 +1005,16 @@
           "name": "Texto",
           "settings": {
             "text": {
-              "label": "Descrição"
+              "label": "Conteúdo"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Corpo"
+              },
+              "options__2": {
+                "label": "Legenda"
+              }
             }
           }
         },
@@ -947,6 +1027,35 @@
             },
             "button_link": {
               "label": "Link de botão"
+            }
+          }
+        },
+        "caption": {
+          "name": "Legenda",
+          "settings": {
+            "text": {
+              "label": "Texto"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Legenda"
+              },
+              "options__2": {
+                "label": "Letras maiúsculas"
+              }
+            },
+            "caption_size": {
+              "label": "Tamanho do texto",
+              "options__1": {
+                "label": "Pequeno"
+              },
+              "options__2": {
+                "label": "Médio"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
             }
           }
         }
@@ -1028,13 +1137,14 @@
           "label": "Mostrar autor"
         },
         "layout": {
-          "label": "Layout em telas grandes",
+          "label": "Layout para desktop",
           "options__1": {
             "label": "Grade"
           },
           "options__2": {
             "label": "Colagem"
-          }
+          },
+          "info": "As postagens aparecem empilhadas em dispositivos móveis."
         },
         "image_height": {
           "label": "Altura da imagem em destaque",
@@ -1141,7 +1251,7 @@
           "label": "Mostrar borda da imagem"
         },
         "collapse_on_larger_devices": {
-          "label": "Recolher em telas maiores"
+          "label": "Recolher no desktop"
         },
         "show_rating": {
           "label": "Mostrar avaliações do produto",
@@ -1470,10 +1580,44 @@
           "label": "Habilitar loop de vídeo"
         },
         "enable_sticky_info": {
-          "label": "Habilitar informações persistentes do produto em telas grandes"
+          "label": "Habilitar conteúdo persistente no desktop"
         },
         "hide_variants": {
           "label": "Ocultar a mídia de outras variantes após selecionar uma delas"
+        },
+        "gallery_layout": {
+          "label": "Layout para desktop",
+          "options__1": {
+            "label": "Empilhado"
+          },
+          "options__2": {
+            "label": "Miniaturas"
+          },
+          "options__3": {
+            "label": "Carrossel de miniaturas"
+          }
+        },
+        "media_size": {
+          "label": "Tamanho da mídia para desktop",
+          "options__1": {
+            "label": "Pequeno"
+          },
+          "options__2": {
+            "label": "Médio"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "info": "A mídia é otimizada automaticamente para dispositivos móveis."
+        },
+        "mobile_thumbnails": {
+          "label": "Layout em dispositivos móveis",
+          "options__1": {
+            "label": "Mostrar miniaturas"
+          },
+          "options__2": {
+            "label": "Ocultar miniaturas"
+          }
         }
       },
       "name": "Informações do produto"
@@ -1758,7 +1902,7 @@
               "options__2": {
                 "label": "Médio"
               },
-              "label": "Tamanho da fonte do título",
+              "label": "Tamanho do título",
               "options__3": {
                 "label": "Grande"
               }
@@ -2213,7 +2357,8 @@
               },
               "options__9": {
                 "label": "Canto inferior direito"
-              }
+              },
+              "info": "A posição é otimizada automaticamente para dispositivos móveis."
             },
             "show_text_box": {
               "label": "Mostrar contêiner no desktop"
