--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -73,14 +73,7 @@
     "loading": "A carregar...",
     "skip_to_product_info": "Saltar para a informação do produto",
     "total_reviews": "análises totais",
-    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas",
-    "load_slide": "Carregar slide",
-    "previous_slideshow": "Diapositivo anterior",
-    "next_slideshow": "Diapositivo seguinte",
-    "pause_slideshow": "Pausa na apresentação de diapositivos",
-    "play_slideshow": "Reproduzir apresentação de diapositivos",
-    "carousel": "Carrossel",
-    "slide": "Diapositivo"
+    "star_reviews_info": "{{ rating_value }} de {{ rating_max }} estrelas"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Atualizar"
       },
       "media": {
-        "open_featured_media": "Abrir conteúdo multimédia em destaque na vista em galeria",
-        "open_media": "Abrir conteúdo multimédia {{ index }} na vista em galeria",
+        "open_media": "Abrir conteúdo multimédia {{ index }} em modal",
         "play_model": "Ativar Visualizador 3D",
-        "play_video": "Reproduzir o vídeo"
+        "play_video": "Reproduzir o vídeo",
+        "gallery_viewer": "Visualizador de Galeria",
+        "load_image": "Carregar imagem {{ index }} na vista de galeria",
+        "load_model": "Carregar Modelo 3D {{ index }} na vista de galeria",
+        "load_video": "Reproduzir vídeo {{ index }} na vista de galeria",
+        "image_available": "A imagem {{ index }} está agora disponível na vista de galeria"
       },
       "view_full_details": "Ver detalhes completos",
       "include_taxes": "Imposto incluído.",
