--- a/locales/pt-PT.schema.json
+++ b/locales/pt-PT.schema.json
@@ -650,7 +650,7 @@
           "label": "Largura de logótipo personalizada"
         },
         "logo_position": {
-          "label": "Posição do logótipo em ecrãs grandes",
+          "label": "Posição do logótipo de desktop",
           "options__1": {
             "label": "Intermédio à esquerda"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Superior centro"
-          }
+          },
+          "info": "Posição é automaticamente otimizada para dispositivos móveis."
         },
         "menu": {
           "label": "Menu"
@@ -819,7 +820,7 @@
               "options__2": {
                 "label": "Grande"
               },
-              "label": "Tamanho da fonte do título"
+              "label": "Tamanho do título"
             }
           },
           "name": "Cabeçalho"
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Grande"
           },
-          "label": "Proporção de imagem"
+          "label": "Altura da imagem",
+          "info": "Determina a altura da secção."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Imagem primeiro"
           },
           "options__2": {
-            "label": "Texto primeiro"
+            "label": "Segunda imagem"
           },
-          "label": "Esquema do desktop",
+          "label": "Posicionamento da imagem em desktop",
           "info": "Imagem primeiro é o esquema predefinido para dispositivos móveis."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Pequeno"
+          },
+          "options__2": {
+            "label": "Médio"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "label": "Largura da imagem em desktop",
+          "info": "A imagem é otimizada automaticamente em dispositivos móveis."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em desktop",
+          "options__2": {
+            "label": "Ao centro"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Em cima"
+          },
+          "options__2": {
+            "label": "Meio"
+          },
+          "options__3": {
+            "label": "Em baixo"
+          },
+          "label": "Posição do conteúdo em desktop"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Sem sobreposição"
+          },
+          "options__2": {
+            "label": "Sobreposição"
+          },
+          "label": "Esquema do conteúdo"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Esquerda"
+          },
+          "options__3": {
+            "label": "Direita"
+          },
+          "label": "Alinhamento do conteúdo em dispositivos móveis",
+          "options__2": {
+            "label": "Ao centro"
+          }
         }
       },
       "blocks": {
@@ -926,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "Título"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Pequeno"
+              },
+              "options__2": {
+                "label": "Médio"
+              },
+              "options__3": {
+                "label": "Grande"
+              },
+              "label": "Tamanho do título"
             }
           },
           "name": "Cabeçalho"
@@ -933,7 +1005,19 @@
         "text": {
           "settings": {
             "text": {
-              "label": "Descrição"
+              "label": "Conteúdo"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Corpo"
+              },
+              "options__2": {
+                "label": "Legenda"
+              },
+              "options__3": {
+                "label": "Maiúsculas"
+              }
             }
           },
           "name": "Texto"
@@ -949,6 +1033,35 @@
             }
           },
           "name": "Botão"
+        },
+        "caption": {
+          "name": "Legenda",
+          "settings": {
+            "text": {
+              "label": "Texto"
+            },
+            "text_style": {
+              "label": "Estilo de texto",
+              "options__1": {
+                "label": "Legenda"
+              },
+              "options__2": {
+                "label": "Maiúsculas"
+              }
+            },
+            "caption_size": {
+              "label": "Tamanho do texto",
+              "options__1": {
+                "label": "Pequeno"
+              },
+              "options__2": {
+                "label": "Médio"
+              },
+              "options__3": {
+                "label": "Grande"
+              }
+            }
+          }
         }
       },
       "presets": {
@@ -1028,13 +1141,14 @@
           "label": "Mostrar autor"
         },
         "layout": {
-          "label": "Esquema em ecrãs grandes",
+          "label": "Esquema de desktop",
           "options__1": {
             "label": "Grelha"
           },
           "options__2": {
             "label": "Colagem"
-          }
+          },
+          "info": "Publicações empilhadas em dispositivo móvel."
         },
         "image_height": {
           "label": "Altura da imagem em destaque",
@@ -1141,7 +1255,7 @@
           "label": "Mostrar borda da imagem"
         },
         "collapse_on_larger_devices": {
-          "label": "Fechar em ecrãs largos"
+          "label": "Fechar em desktop"
         },
         "show_rating": {
           "label": "Mostrar classificação do produto",
@@ -1471,10 +1585,44 @@
           "label": "Ativar ciclo de vídeo"
         },
         "enable_sticky_info": {
-          "label": "Ative a informação fixa do produto em grandes ecrãs"
+          "label": "Ativar conteúdo fixo no desktop"
         },
         "hide_variants": {
           "label": "Ocultar outro conteúdo multimédia das variantes após selecionar uma variante"
+        },
+        "gallery_layout": {
+          "label": "Esquema de desktop",
+          "options__1": {
+            "label": "Empilhado"
+          },
+          "options__2": {
+            "label": "Miniaturas"
+          },
+          "options__3": {
+            "label": "Carrossel de miniaturas"
+          }
+        },
+        "media_size": {
+          "label": "Tamanho dos conteúdos multimédia para desktop",
+          "options__1": {
+            "label": "Pequeno"
+          },
+          "options__2": {
+            "label": "Médio"
+          },
+          "options__3": {
+            "label": "Grande"
+          },
+          "info": "Os conteúdos multimédia são automaticamente otimizados para dispositivos móveis."
+        },
+        "mobile_thumbnails": {
+          "label": "Esquema móvel",
+          "options__1": {
+            "label": "Mostrar miniaturas"
+          },
+          "options__2": {
+            "label": "Ocultar miniaturas"
+          }
         }
       }
     },
@@ -1757,7 +1905,7 @@
               "options__2": {
                 "label": "Média"
               },
-              "label": "Tamanho da fonte do título",
+              "label": "Tamanho do título",
               "options__3": {
                 "label": "Grande"
               }
@@ -2301,7 +2449,8 @@
               },
               "options__9": {
                 "label": "Canto inferior direito"
-              }
+              },
+              "info": "Posição é automaticamente otimizada para dispositivos móveis."
             },
             "show_text_box": {
               "label": "Mostrar recetores no desktop"
