--- a/locales/ru.json
+++ b/locales/ru.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Перейти к информации о продукте",
     "total_reviews": "всего отзывов",
-    "star_reviews_info": "{{ rating_value }} из {{ rating_max }} звезд",
-    "load_slide": "Загрузить слайд",
-    "previous_slideshow": "Предыдущий слайд",
-    "next_slideshow": "Следующий слайд",
-    "pause_slideshow": "Приостановить показ слайд-шоу",
-    "play_slideshow": "Воспроизвести слайд-шоу",
-    "carousel": "Карусель",
-    "slide": "Слайд"
+    "star_reviews_info": "{{ rating_value }} из {{ rating_max }} звезд"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Обновить"
       },
       "media": {
-        "open_featured_media": "Открыть рекомендуемые медиа-файлы в режиме галереи",
-        "open_media": "Открыть медиа-файлы {{ index }} в режиме галереи",
+        "open_media": "Открыть медиа-файлы {{ index }} в модальном окне",
         "play_model": "Открыть объемную модель",
-        "play_video": "Воспроизвести видео"
+        "play_video": "Воспроизвести видео",
+        "gallery_viewer": "Средство просмотра галереи",
+        "load_image": "Загрузить изображение {{ index }} в средство просмотра галереи",
+        "load_model": "Загрузить трехмерную модель {{ index }} в средство просмотра галереи",
+        "load_video": "Загрузить видео {{ index }} в средство просмотра галереи",
+        "image_available": "Изображение {{ index }} доступно в средстве просмотра галереи"
       },
       "view_full_details": "Просмотреть всю информацию",
       "include_taxes": "Сумма налога включена.",
