--- a/locales/sl-SI.json
+++ b/locales/sl-SI.json
@@ -73,14 +73,7 @@
     },
     "skip_to_product_info": "Preskoči na informacije o izdelku",
     "total_reviews": "skupno število pregledov",
-    "star_reviews_info": "{{ rating_value }} od {{ rating_max }} zvezdic",
-    "load_slide": "Naloži diapozitiv",
-    "previous_slideshow": "Prejšnji diapozitiv",
-    "next_slideshow": "Naslednji diapozitiv",
-    "pause_slideshow": "Zaustavi diaprojekcijo",
-    "play_slideshow": "Predvajaj diaprojekcijo",
-    "carousel": "Vrtiljak",
-    "slide": "Diapozitiv"
+    "star_reviews_info": "{{ rating_value }} od {{ rating_max }} zvezdic"
   },
   "blogs": {
     "article": {
@@ -143,10 +136,14 @@
         "refresh": "Osveži"
       },
       "media": {
-        "open_featured_media": "Odpri izpostavljeno predstavnostno vsebino v pogledu galerije",
-        "open_media": "Odpri predstavnostno vsebino {{ index }} v pogledu galerije",
+        "open_media": "Predstavnostne vsebine {{ index }} odprite v modalnem načinu",
         "play_model": "Predvajaj 3D-pregledovalnik",
-        "play_video": "Predvajaj videoposnetek"
+        "play_video": "Predvajaj videoposnetek",
+        "gallery_viewer": "Pregledovalnik galerije",
+        "load_image": "Naložite sliko {{ index }} v pogledu galerije",
+        "load_model": "Naložite 3D-model {{ index }} v pogledu galerije",
+        "load_video": "Predvajajte videoposnetek {{ index }} v pogledu galerije",
+        "image_available": "Slika {{ index }} je zdaj na voljo v pogledu galerije"
       },
       "view_full_details": "Prikaži vse podrobnosti",
       "include_taxes": "Vključno z davkom.",
