--- a/locales/sv.json
+++ b/locales/sv.json
@@ -73,14 +73,7 @@
     "loading": "Laddar ...",
     "skip_to_product_info": "Gå vidare till produktinformation",
     "total_reviews": "totalt antal recensioner",
-    "star_reviews_info": "{{ rating_value }} av {{ rating_max }} stjärnor",
-    "load_slide": "Ladda bild",
-    "previous_slideshow": "Föregående bild",
-    "next_slideshow": "Nästa bild",
-    "pause_slideshow": "Pausa bildspelet",
-    "play_slideshow": "Spela bildspel",
-    "carousel": "Karusell",
-    "slide": "Bild"
+    "star_reviews_info": "{{ rating_value }} av {{ rating_max }} stjärnor"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Uppdatera"
       },
       "media": {
-        "open_featured_media": "Öppna utvald media i gallerivyn",
-        "open_media": "Öppna media {{ index }} i gallerivyn",
+        "open_media": "Öppna mediet {{ index }} i modalfönster",
         "play_model": "Spela 3D-visaren",
-        "play_video": "Spela video"
+        "play_video": "Spela video",
+        "gallery_viewer": "Gallerivisning",
+        "load_image": "Ladda bilden {{ index }} i gallerivisning",
+        "load_model": "Ladda 3D-modellen {{ index }} i gallerivisning",
+        "load_video": "Spela videon {{ index }} i gallerivisning",
+        "image_available": "Bilden {{ index }} är nu tillgänglig i gallerivisning"
       },
       "view_full_details": "Visa alla uppgifter",
       "include_taxes": "Skatt ingår.",
