--- a/locales/th.json
+++ b/locales/th.json
@@ -73,14 +73,7 @@
     "loading": "กำลังโหลด...",
     "skip_to_product_info": "ข้ามไปยังข้อมูลสินค้า",
     "total_reviews": "รีวิวทั้งหมด",
-    "star_reviews_info": "{{ rating_value }} จาก {{ rating_max }} ดาว",
-    "load_slide": "โหลดสไลด์",
-    "previous_slideshow": "สไลด์ก่อนหน้า",
-    "next_slideshow": "สไลด์ถัดไป",
-    "pause_slideshow": "หยุดสไลด์โชว์ชั่วคราว",
-    "play_slideshow": "เล่นสไลด์โชว์",
-    "carousel": "ภาพสไลด์",
-    "slide": "สไลด์"
+    "star_reviews_info": "{{ rating_value }} จาก {{ rating_max }} ดาว"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "รีเฟรช"
       },
       "media": {
-        "open_featured_media": "เปิดสื่อที่แนะนำในมุมมองแกลเลอรี",
-        "open_media": "เปิดสื่อ {{ index }} ในมุมมองแกลเลอรี",
+        "open_media": "เปิดสื่อ {{ index }} ในโมดอล",
         "play_model": "เล่นตัวแสดง 3 มิติ",
-        "play_video": "เล่นวิดีโอ"
+        "play_video": "เล่นวิดีโอ",
+        "gallery_viewer": "เครื่องมือดูภาพของแกลเลอรี",
+        "load_image": "โหลดรูปภาพ {{ index }} ในมุมมองแกลเลอรี",
+        "load_model": "โหลดโมเดล 3 มิติ {{ index }} ในมุมมองแกลเลอรี",
+        "load_video": "เล่นวิดีโอ {{ index }} ในมุมมองแกลเลอรี",
+        "image_available": "รูปภาพ {{ index }} พร้อมใช้งานในมุมมองแกลเลอรี"
       },
       "view_full_details": "ดูรายละเอียดทั้งหมด",
       "include_taxes": "รวมภาษี",
