--- a/locales/tr.json
+++ b/locales/tr.json
@@ -73,14 +73,7 @@
     "loading": "Yükleniyor...",
     "skip_to_product_info": "Ürün bilgisine atla",
     "total_reviews": "toplam değerlendirme",
-    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} yıldız",
-    "load_slide": "Slaytı yükle",
-    "previous_slideshow": "Önceki slayt",
-    "next_slideshow": "Sonraki slayt",
-    "pause_slideshow": "Slayt gösterisini duraklat",
-    "play_slideshow": "Slayt gösterisini oynat",
-    "carousel": "Döngü",
-    "slide": "Slayt"
+    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} yıldız"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Yenile"
       },
       "media": {
-        "open_featured_media": "Öne çıkan medyayı galeri görünümünde aç",
-        "open_media": "Medya {{ index }} galeri görünümünde aç",
+        "open_media": "Medya {{ index }} modda oynatın",
         "play_model": "3B Görüntüleyici'yi Oynat",
-        "play_video": "Videoyu oynat"
+        "play_video": "Videoyu oynat",
+        "gallery_viewer": "Galeri Görüntüleyici",
+        "load_image": "Görsel {{ index }} galeri görüntüleyicide yükleyin",
+        "load_model": "3B Model {{ index }} galeri görüntüleyicide yükleyin",
+        "load_video": "Video {{ index }} galeri görüntüleyicide oynatın",
+        "image_available": "Görsel {{ index }} artık galeri görüntüleyicide kullanılabilir"
       },
       "view_full_details": "Tüm ayrıntıları görüntüle",
       "include_taxes": "Vergi dahildir.",
