--- a/locales/tr.schema.json
+++ b/locales/tr.schema.json
@@ -650,7 +650,7 @@
           "label": "Özel logo genişliği"
         },
         "logo_position": {
-          "label": "Geniş ekranlardaki logo konumu",
+          "label": "Masaüstü logo konumu",
           "options__1": {
             "label": "Orta sol"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Üst orta"
-          }
+          },
+          "info": "Konum, mobil cihazlar için otomatik olarak optimize edilir."
         },
         "menu": {
           "label": "Menü"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Büyük"
               },
-              "label": "Başlık yazı tipi boyutu"
+              "label": "Başlık boyutu"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Büyük"
           },
-          "label": "Görsel oranı"
+          "label": "Görsel yüksekliği",
+          "info": "Bölüm yüksekliğini belirler."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Önce görsel"
           },
           "options__2": {
-            "label": "Önce metin"
+            "label": "Görsel 2"
           },
-          "label": "Masaüstü düzeni",
+          "label": "Masaüstü görsel yerleşimi",
           "info": "Önce görsel, varsayılan mobil düzendir."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Küçük"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Büyük"
+          },
+          "label": "Masaüstü görsel genişliği",
+          "info": "Görsel, mobil cihazlar için otomatik olarak optimize edilir."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Masaüstü içerik hizalaması"
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Üst"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Alt"
+          },
+          "label": "Masaüstü içerik konumu"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Çakışma yok"
+          },
+          "options__2": {
+            "label": "Çakışma"
+          },
+          "label": "İçerik düzeni"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Sol"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Sağ"
+          },
+          "label": "Mobil içerik hizalaması"
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Başlık"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Küçük"
+              },
+              "options__2": {
+                "label": "Orta"
+              },
+              "options__3": {
+                "label": "Büyük"
+              },
+              "label": "Başlık boyutu"
             }
           }
         },
@@ -934,7 +1006,19 @@
           "name": "Metin rengi",
           "settings": {
             "text": {
-              "label": "Açıklama"
+              "label": "İçerik"
+            },
+            "text_style": {
+              "label": "Metin stili",
+              "options__1": {
+                "label": "Gövde"
+              },
+              "options__2": {
+                "label": "Alt yazı"
+              },
+              "options__3": {
+                "label": "Büyük harf"
+              }
             }
           }
         },
@@ -947,6 +1031,35 @@
             },
             "button_link": {
               "label": "Düğme bağlantısı"
+            }
+          }
+        },
+        "caption": {
+          "name": "Alt yazı",
+          "settings": {
+            "text": {
+              "label": "Metin"
+            },
+            "text_style": {
+              "label": "Metin stili",
+              "options__1": {
+                "label": "Alt yazı"
+              },
+              "options__2": {
+                "label": "Büyük harf"
+              }
+            },
+            "caption_size": {
+              "label": "Metin boyutu",
+              "options__1": {
+                "label": "Küçük"
+              },
+              "options__2": {
+                "label": "Orta"
+              },
+              "options__3": {
+                "label": "Büyük"
+              }
             }
           }
         }
@@ -1028,13 +1141,14 @@
           "label": "Yazarı göster"
         },
         "layout": {
-          "label": "Geniş ekranlardaki düzen",
+          "label": "Masaüstü düzeni",
           "options__1": {
             "label": "Izgara"
           },
           "options__2": {
             "label": "Kolaj"
-          }
+          },
+          "info": "Gönderiler, mobil cihazda üst üste eklenir."
         },
         "image_height": {
           "label": "Öne çıkan görsel yüksekliği",
@@ -1141,7 +1255,7 @@
           "label": "Görsel kenarlığını göster"
         },
         "collapse_on_larger_devices": {
-          "label": "Daha büyük ekranlarda daralt"
+          "label": "Masaüstünde daralt"
         },
         "show_rating": {
           "label": "Ürün puanlarını göster",
@@ -1470,10 +1584,44 @@
           "label": "Video döngüsünü etkinleştir"
         },
         "enable_sticky_info": {
-          "label": "Geniş ekranlarda sabit ürün bilgisini etkinleştir"
+          "label": "Masaüstünde sabit içeriği etkinleştir"
         },
         "hide_variants": {
           "label": "Bir varyasyon seçtikten sonra diğer varyasyonların medyasını gizleyin"
+        },
+        "gallery_layout": {
+          "label": "Masaüstü düzeni",
+          "options__1": {
+            "label": "Üst üste"
+          },
+          "options__2": {
+            "label": "Küçük resimler"
+          },
+          "options__3": {
+            "label": "Küçük resim döngüsü"
+          }
+        },
+        "media_size": {
+          "label": "Masaüstü medya boyutu",
+          "info": "Medya, mobil cihazlar için otomatik olarak optimize edilir.",
+          "options__1": {
+            "label": "Küçük"
+          },
+          "options__2": {
+            "label": "Orta"
+          },
+          "options__3": {
+            "label": "Büyük"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Mobil düzen",
+          "options__1": {
+            "label": "Küçük resimleri göster"
+          },
+          "options__2": {
+            "label": "Küçük resimleri gizle"
+          }
         }
       },
       "name": "Ürün bilgileri"
@@ -1758,7 +1906,7 @@
               "options__2": {
                 "label": "Orta"
               },
-              "label": "Başlık yazı tipi boyutu",
+              "label": "Başlık boyutu",
               "options__3": {
                 "label": "Büyük"
               }
@@ -2213,7 +2361,8 @@
               },
               "options__9": {
                 "label": "Alt sağ"
-              }
+              },
+              "info": "Konum, mobil cihazlar için otomatik olarak optimize edilir."
             },
             "show_text_box": {
               "label": "Masaüstünde kapsayıcıyı göster"
