--- a/locales/vi.json
+++ b/locales/vi.json
@@ -73,14 +73,7 @@
     "loading": "Đang tải...",
     "skip_to_product_info": "Chuyển đến thông tin sản phẩm",
     "total_reviews": "tổng số lượt đánh giá",
-    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} sao",
-    "load_slide": "Tải trang chiếu",
-    "previous_slideshow": "Trang chiếu trước",
-    "next_slideshow": "Trang chiếu sau",
-    "pause_slideshow": "Tạm dừng bản trình chiếu",
-    "play_slideshow": "Phát bản trình chiếu",
-    "carousel": "Quay vòng",
-    "slide": "Trang chiếu"
+    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} sao"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "Làm mới"
       },
       "media": {
-        "open_featured_media": "Mở phương tiện nổi bật trong dạng xem bộ sưu tập",
-        "open_media": "Mở {{ index }} phương tiện trong dạng xem bộ sưu tập",
+        "open_media": "Mở phương tiện {{ index }} trong hộp tương tác",
         "play_model": "Mở Trình xem 3D",
-        "play_video": "Phát video"
+        "play_video": "Phát video",
+        "gallery_viewer": "Trình xem thư viện",
+        "load_image": "Tải hình ảnh {{ index }} trong chế độ xem thư viện",
+        "load_model": "Tải mô hình 3D {{ index }} trong chế độ xem thư viện",
+        "load_video": "Phát video {{ index }} trong chế độ xem thư viện",
+        "image_available": "Hình ảnh {{ index }} hiện đã có trong chế độ xem thư viện"
       },
       "view_full_details": "Xem toàn bộ chi tiết",
       "include_taxes": "Đã bao gồm thuế.",
