--- a/locales/vi.schema.json
+++ b/locales/vi.schema.json
@@ -650,7 +650,7 @@
           "label": "Chiều rộng logo tùy chỉnh"
         },
         "logo_position": {
-          "label": "Vị trí logo trên màn hình lớn",
+          "label": "Vị trí logo trên màn hình máy tính",
           "options__1": {
             "label": "Ở giữa bên trái"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "Trên cùng ở giữa"
-          }
+          },
+          "info": "Vị trí được tự động tối ưu hóa cho thiết bị di động."
         },
         "menu": {
           "label": "Menu"
@@ -820,7 +821,7 @@
               "options__2": {
                 "label": "Lớn"
               },
-              "label": "Cỡ phông chữ tiêu đề"
+              "label": "Cỡ tiêu đề"
             }
           }
         },
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "Lớn"
           },
-          "label": "Tỷ lệ hình ảnh"
+          "label": "Chiều cao hình ảnh",
+          "info": "Xác định chiều cao của mục."
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "Hình ảnh trước"
           },
           "options__2": {
-            "label": "Văn bản trước"
+            "label": "Hình ảnh thứ hai"
           },
-          "label": "Bố cục trên màn hình máy tính",
+          "label": "Vị trí hình ảnh trên màn hình máy tính để bàn",
           "info": "Hình ảnh trước là bố cục mặc định trên di động."
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "Nhỏ"
+          },
+          "options__2": {
+            "label": "Trung bình"
+          },
+          "options__3": {
+            "label": "Lớn"
+          },
+          "label": "Chiều rộng hình ảnh trên máy tính để bàn",
+          "info": "Hình ảnh được tự động tối ưu hóa cho thiết bị di động."
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên màn hình máy tính để bàn",
+          "options__2": {
+            "label": "Giữa"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "Bên trên"
+          },
+          "options__2": {
+            "label": "Ở giữa"
+          },
+          "options__3": {
+            "label": "Bên dưới"
+          },
+          "label": "Vị trí nội dung trên màn hình máy tính để bàn"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "Không trùng"
+          },
+          "options__2": {
+            "label": "Trùng"
+          },
+          "label": "Bố cục nội dung"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "Bên trái"
+          },
+          "options__3": {
+            "label": "Bên phải"
+          },
+          "label": "Căn chỉnh nội dung trên thiết bị di động",
+          "options__2": {
+            "label": "Giữa"
+          }
         }
       },
       "blocks": {
@@ -927,6 +987,18 @@
           "settings": {
             "heading": {
               "label": "Tiêu đề"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "Nhỏ"
+              },
+              "options__2": {
+                "label": "Trung bình"
+              },
+              "options__3": {
+                "label": "Lớn"
+              },
+              "label": "Cỡ tiêu đề"
             }
           }
         },
@@ -934,7 +1006,19 @@
           "name": "Văn bản",
           "settings": {
             "text": {
-              "label": "Mô tả"
+              "label": "Nội dung"
+            },
+            "text_style": {
+              "label": "Kiểu văn bản",
+              "options__1": {
+                "label": "Nội dung"
+              },
+              "options__2": {
+                "label": "Tiêu đề"
+              },
+              "options__3": {
+                "label": "Chữ viết hoa"
+              }
             }
           }
         },
@@ -947,6 +1031,35 @@
             },
             "button_link": {
               "label": "Liên kết trên nút"
+            }
+          }
+        },
+        "caption": {
+          "name": "Phụ đề",
+          "settings": {
+            "text": {
+              "label": "Văn bản"
+            },
+            "text_style": {
+              "label": "Kiểu văn bản",
+              "options__1": {
+                "label": "Tiêu đề phụ"
+              },
+              "options__2": {
+                "label": "Chữ viết hoa"
+              }
+            },
+            "caption_size": {
+              "label": "Cỡ chữ",
+              "options__1": {
+                "label": "Nhỏ"
+              },
+              "options__2": {
+                "label": "Trung bình"
+              },
+              "options__3": {
+                "label": "Lớn"
+              }
             }
           }
         }
@@ -1028,13 +1141,14 @@
           "label": "Hiển thị tác giả"
         },
         "layout": {
-          "label": "Bố cục trên màn hình lớn",
+          "label": "Bố cục trên màn hình máy tính",
           "options__1": {
             "label": "Lưới"
           },
           "options__2": {
             "label": "Ghép"
-          }
+          },
+          "info": "Bài viết được xếp chồng trên thiết bị di động."
         },
         "image_height": {
           "label": "Chiều cao hình ảnh nổi bật",
@@ -1141,7 +1255,7 @@
           "label": "Hiển thị đường viền hình ảnh"
         },
         "collapse_on_larger_devices": {
-          "label": "Thu nhỏ trên màn hình lớn hơn"
+          "label": "Thu nhỏ trên màn hình máy tính"
         },
         "show_rating": {
           "label": "Hiển thị thứ hạng sản phẩm",
@@ -1471,10 +1585,44 @@
           "label": "Bật vòng lặp video"
         },
         "enable_sticky_info": {
-          "label": "Bật thông tin sản phẩm dính trên màn hình lớn"
+          "label": "Bật nội dung dính trên máy tính"
         },
         "hide_variants": {
           "label": "Ẩn phương tiện của các mẫu mã khác sau khi chọn một mẫu mã"
+        },
+        "gallery_layout": {
+          "label": "Bố cục trên máy tính",
+          "options__1": {
+            "label": "Đã xếp chồng"
+          },
+          "options__2": {
+            "label": "Ảnh thu nhỏ"
+          },
+          "options__3": {
+            "label": "Quay vòng hình thu nhỏ"
+          }
+        },
+        "media_size": {
+          "label": "Kích cỡ phương tiện trên màn hình máy tính",
+          "info": "Phương tiện được tự động tối ưu hóa cho thiết bị di động.",
+          "options__1": {
+            "label": "Nhỏ"
+          },
+          "options__2": {
+            "label": "Trung bình"
+          },
+          "options__3": {
+            "label": "Lớn"
+          }
+        },
+        "mobile_thumbnails": {
+          "label": "Bố cục di động",
+          "options__1": {
+            "label": "Hiển thị hình thu nhỏ"
+          },
+          "options__2": {
+            "label": "Ẩn hình thu nhỏ"
+          }
         }
       }
     },
@@ -1758,7 +1906,7 @@
               "options__2": {
                 "label": "Trung bình"
               },
-              "label": "Cỡ phông chữ tiêu đề",
+              "label": "Cỡ tiêu đề",
               "options__3": {
                 "label": "Lớn"
               }
@@ -2301,7 +2449,8 @@
               },
               "options__9": {
                 "label": "Dưới cùng bên phải"
-              }
+              },
+              "info": "Vị trí được tự động tối ưu hóa cho thiết bị di động."
             },
             "show_text_box": {
               "label": "Hiện vùng chứa trên máy tính để bàn"
