--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -73,14 +73,7 @@
     "loading": "正在加载…",
     "skip_to_product_info": "跳至产品信息",
     "total_reviews": "总评论数",
-    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} 星",
-    "load_slide": "加载幻灯片",
-    "previous_slideshow": "上一张幻灯片",
-    "next_slideshow": "下一张幻灯片",
-    "pause_slideshow": "暂停幻灯片",
-    "play_slideshow": "播放幻灯片",
-    "carousel": "轮播",
-    "slide": "幻灯片"
+    "star_reviews_info": "{{ rating_value }}/{{ rating_max }} 星"
   },
   "blogs": {
     "article": {
@@ -141,10 +134,14 @@
         "refresh": "刷新"
       },
       "media": {
-        "open_featured_media": "以图库视图的方式打开精选媒体文件",
-        "open_media": "以图库视图的方式打开媒体文件 {{ index }}",
+        "open_media": "在模态窗口中打开媒体文件 {{ index }}",
         "play_model": "播放 3D 查看器",
-        "play_video": "播放视频"
+        "play_video": "播放视频",
+        "gallery_viewer": "图库查看器",
+        "load_image": "在图库视图中加载图片 {{ index }}",
+        "load_model": "在图库视图中加载 3D 模型 {{ index }}",
+        "load_video": "在图库视图中播放视频 {{ index }}",
+        "image_available": "图片 {{ index }} 现已在图库视图中可用"
       },
       "view_full_details": "查看完整详细信息",
       "include_taxes": "含税费。",
