--- a/locales/zh-TW.schema.json
+++ b/locales/zh-TW.schema.json
@@ -650,7 +650,7 @@
           "label": "自訂標誌寬度"
         },
         "logo_position": {
-          "label": "標誌在大型螢幕上的位置",
+          "label": "桌面版標誌位置",
           "options__1": {
             "label": "中央左方"
           },
@@ -659,7 +659,8 @@
           },
           "options__3": {
             "label": "中央上方"
-          }
+          },
+          "info": "行動版會自動調整為最佳位置。"
         },
         "menu": {
           "label": "選單"
@@ -819,7 +820,7 @@
               "options__2": {
                 "label": "大"
               },
-              "label": "標題字型大小"
+              "label": "標題大小"
             }
           },
           "name": "標題"
@@ -890,7 +891,8 @@
           "options__3": {
             "label": "大"
           },
-          "label": "圖片比例"
+          "label": "圖片高度",
+          "info": "決定區段高度。"
         },
         "color_scheme": {
           "options__1": {
@@ -915,10 +917,68 @@
             "label": "先顯示圖片"
           },
           "options__2": {
-            "label": "先顯示文字"
+            "label": "圖片秒數"
           },
-          "label": "桌面版版面配置",
+          "label": "桌面版圖片位置",
           "info": "圖片會先預設為行動版版面配置。"
+        },
+        "desktop_image_width": {
+          "options__1": {
+            "label": "小"
+          },
+          "options__2": {
+            "label": "中"
+          },
+          "options__3": {
+            "label": "大"
+          },
+          "label": "桌面版圖片寬度",
+          "info": "行動版的圖片會自動調整大小。"
+        },
+        "desktop_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "桌面版內容對齊方式",
+          "options__2": {
+            "label": "置中"
+          }
+        },
+        "desktop_content_position": {
+          "options__1": {
+            "label": "靠上"
+          },
+          "options__2": {
+            "label": "置中"
+          },
+          "options__3": {
+            "label": "靠下"
+          },
+          "label": "桌面版內容位置"
+        },
+        "content_layout": {
+          "options__1": {
+            "label": "不可重疊"
+          },
+          "options__2": {
+            "label": "可重疊"
+          },
+          "label": "內容版面配置"
+        },
+        "mobile_content_alignment": {
+          "options__1": {
+            "label": "靠左"
+          },
+          "options__3": {
+            "label": "靠右"
+          },
+          "label": "行動版內容對齊方式",
+          "options__2": {
+            "label": "置中"
+          }
         }
       },
       "blocks": {
@@ -926,6 +986,18 @@
           "settings": {
             "heading": {
               "label": "標題"
+            },
+            "heading_size": {
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              },
+              "label": "標題大小"
             }
           },
           "name": "標題"
@@ -933,7 +1005,19 @@
         "text": {
           "settings": {
             "text": {
-              "label": "說明"
+              "label": "內容"
+            },
+            "text_style": {
+              "label": "文字樣式",
+              "options__1": {
+                "label": "內文"
+              },
+              "options__2": {
+                "label": "副標題"
+              },
+              "options__3": {
+                "label": "大寫"
+              }
             }
           },
           "name": "文字"
@@ -949,6 +1033,35 @@
             }
           },
           "name": "按鈕"
+        },
+        "caption": {
+          "name": "說明",
+          "settings": {
+            "text": {
+              "label": "文字"
+            },
+            "text_style": {
+              "label": "文字樣式",
+              "options__1": {
+                "label": "副標題"
+              },
+              "options__2": {
+                "label": "大寫"
+              }
+            },
+            "caption_size": {
+              "label": "文字大小",
+              "options__1": {
+                "label": "小"
+              },
+              "options__2": {
+                "label": "中"
+              },
+              "options__3": {
+                "label": "大"
+              }
+            }
+          }
         }
       },
       "presets": {
@@ -988,7 +1101,7 @@
               "label": "顯示作者"
             }
           },
-          "name": "職稱"
+          "name": "標題"
         },
         "content": {
           "name": "內容"
@@ -1028,13 +1141,14 @@
           "label": "顯示作者"
         },
         "layout": {
-          "label": "大型螢幕上的版面配置",
+          "label": "桌面版版面配置",
           "options__1": {
             "label": "網格"
           },
           "options__2": {
             "label": "拼貼"
-          }
+          },
+          "info": "行動版的文章會以堆疊呈現。"
         },
         "image_height": {
           "label": "主要圖片高度",
@@ -1141,7 +1255,7 @@
           "label": "顯示圖片邊框"
         },
         "collapse_on_larger_devices": {
-          "label": "在較大的螢幕上收合"
+          "label": "在桌面版收合"
         },
         "show_rating": {
           "label": "顯示產品評等",
@@ -1430,7 +1544,7 @@
           "name": "彈出式視窗"
         },
         "title": {
-          "name": "職稱"
+          "name": "標題"
         },
         "price": {
           "name": "價格"
@@ -1471,10 +1585,44 @@
           "label": "啟用影片循環播放功能"
         },
         "enable_sticky_info": {
-          "label": "在大螢幕上啟用固定產品資訊"
+          "label": "在桌面版啟用黏性內容"
         },
         "hide_variants": {
           "label": "在選取一個子類後，隱藏其他子類的多媒體檔案"
+        },
+        "gallery_layout": {
+          "label": "桌面版版面配置",
+          "options__1": {
+            "label": "已堆疊"
+          },
+          "options__2": {
+            "label": "縮圖"
+          },
+          "options__3": {
+            "label": "縮圖輪播"
+          }
+        },
+        "media_size": {
+          "label": "桌面版多媒體檔案大小",
+          "options__1": {
+            "label": "小"
+          },
+          "options__2": {
+            "label": "中"
+          },
+          "options__3": {
+            "label": "大"
+          },
+          "info": "行動版的多媒體檔案會自動調整大小"
+        },
+        "mobile_thumbnails": {
+          "label": "行動版版面配置",
+          "options__1": {
+            "label": "顯示縮圖"
+          },
+          "options__2": {
+            "label": "隱藏縮圖"
+          }
         }
       }
     },
@@ -1757,7 +1905,7 @@
               "options__2": {
                 "label": "中等"
               },
-              "label": "標題字型尺寸",
+              "label": "標題大小",
               "options__3": {
                 "label": "大"
               }
@@ -2302,7 +2450,8 @@
               },
               "options__9": {
                 "label": "下方靠右"
-              }
+              },
+              "info": "行動版會自動調整為最佳位置。"
             },
             "show_text_box": {
               "label": "在桌面顯示容器"
